--- a/jvm/docs/内存与垃圾回收/01_类加载子系统.md
+++ b/jvm/docs/内存与垃圾回收/01_类加载子系统.md
@@ -70,9 +70,10 @@ public class Main {
 
 ![类加载器的分类](../images/类加载器的分类.png)
 
-- JVM支持两种类型的类加载器，分别为引导类加载器（Bootstrap Classloader）和自定义类加载器（User-Defined Classloader）。
-- 从概念上来讲，自定义类加载器一般指的是程序中由开发人员自定义的一类加载器，但是Java虚拟机规范没有这么定义，而是将所有派生于抽象类`ClassLoader`的类都划分为自定义类加载器。
+- JVM支持两种类型的类加载器，分别为**引导类加载器（Bootstrap Classloader）**和**自定义类加载器（User-Defined Classloader）**。
+- 从概念上来讲，自定义类加载器一般指的是程序中由开发人员自定义的一类加载器，但是Java虚拟机规范没有这么定义，而是**将所有派生于抽象类`ClassLoader`的类都划分为自定义类加载器**。
 - 无论类加载器的类型如何划分，在程序中我们最常见的类加载器始终只有3个。
+- 这里的四者之间的关系是包含关系。不是继承关系。理解为上下级关系。
 
 ```java
 public class Main {
@@ -106,18 +107,18 @@ public class Main {
 
 ### 扩展类加载器（Extension ClassLoader）
 
-- Java语音编写，由`sun.misc.Launcher$ExtClassLoader`实现。
-- 派生于ClassLoader类。
+- **Java语音编写**，由`sun.misc.Launcher$ExtClassLoader`实现。
+- **派生于`ClassLoader`类**。
 - 父类加载器为启动类加载器。
-- 从`java.ext.dirs`系统属性所指定的目录中加载类库，或从JDK的安装目录的jre/lib/ext子目录（扩展目录）下加载类库。如果用户创建的JAR放在此目录下，也会自动由扩展类加载器加载。
+- 从`java.ext.dirs`系统属性所指定的目录中加载类库，或从JDK的安装目录的jre/lib/ext子目录（扩展目录）下加载类库。**如果用户创建的JAR放在此目录下，也会自动由扩展类加载器加载。**
 
 ### 应用类加载器（系统类加载器 AppClassLoader）
 
-- Java语音编写，由`sun.misc.Launcher$AppClassLoader`实现。
-- 派生于`ClassLoader`类。
+- **Java语音编写**，由`sun.misc.Launcher$AppClassLoader`实现。
+- **派生于`ClassLoader`类**。
 - 父类加载器为扩展类加载器。
 - 他负责加载环境变量classpath或系统属性`java.class.path`指定路径下的类库。
-- 该类加载是程序中默认的类加载器，一般来说，Java应用的类都是由它来完成加载。
+- **该类加载是程序中默认的类加载器**，一般来说，Java应用的类都是由它来完成加载。
 - 通过`ClassLoader#getSystemClassLoader()`方法可以获取带该类加载器。
 
 ```java
@@ -138,7 +139,23 @@ public class Main {
 }
 ```
 
+### 用户自定义类加载器
+
+- 在Java的日常应用程序开发中，类的加载几乎是由上述3种类加载器相互配合执行得到，在必要时，我们还可以自定义类加载器，来指定类的加载方式。
+- 为什么要自定义类加载器？
+  - 隔离加载类（多个框架的类相同使用）
+  - 修改类加载的方式
+  - 扩展加载源
+  - 防止源码泄漏（对字节码文件加密，自定义类加载器解密）
+
+**如何自定义类加载器？**
+
+- 继承`java.lang.ClassLoader`类，覆盖`findClass()`方法。
+- 如果没有过于复杂的需求，直接继承`URLClassLoader`类，这样可以避免自己编写`findClass()`方法及获取字节码流的方式，更加简洁。
+
 ## 双亲委派机制
+
+Java虚拟机对class文件采用的是按需加载的方式，也就是说当需要使用该类时才会将它的class文件加载到内存生成class对象。而且加载某个类的class文件时，Java虚拟机采用的是双亲委派模式，即把请求交由父类处理，它是一种任务委派模式。
 
 ### 工作原理
 
@@ -165,7 +182,7 @@ java.lang.SecurityException: Prohibited package name: java.lang
 
 ## 沙箱安全机制
 
-自定义String类，但是在加载自定义String类的时候回率先使用引导类加载器加载，而引导类加载器在加载的过程以中会先加载jdk自带的文件（rt.jar包中java\lang\String.class），报错信息说没有main方法，就是因为加载的是rt.jar包中的`String`类。这样可以保证对java核心源代码的保护，这就是沙箱安全机制。
+自定义`String`类，但是在加载自定义`String`类的时候回率先使用引导类加载器加载，而引导类加载器在加载的过程以中会先加载jdk自带的文件（rt.jar包中java\lang\String.class），报错信息说没有main方法，就是因为加载的是rt.jar包中的`String`类。这样可以保证对java核心源代码的保护，这就是沙箱安全机制。
 
 ## 其他
 
@@ -174,11 +191,11 @@ java.lang.SecurityException: Prohibited package name: java.lang
 - 类的完整类名必须一致，包括包名。
 - 加载这个类的`ClassLoader`（指`ClassLoader`实例对象）必须相同。
 
-如果一个类是由用户类加载器加载的，那么JVM会将这个类加载器的一个引用作为类型信息的一部分保存在方法去中。 
+如果一个类是由用户类加载器加载的，那么JVM会**将这个类加载器的一个引用作为类型信息的一部分保存在方法去中**。 当解析一个类型到另一个类型的引用的时候，JVM需要保证这两个类型的类加载器相同。
 
 ### 类的主动使用和被动使用
 
-主动使用，分为七种情况：
+**主动使用，分为七种情况**：
 
 - 创建类的实例
 - 访问某个类或接口的静态变量，或者对该静态变量赋值
@@ -188,43 +205,4 @@ java.lang.SecurityException: Prohibited package name: java.lang
 - Java虚拟机启动时被标明为启动类的类
 - JDK7开始提供的动态语言支持：`java.lang.invoke.MethodHandle`实例的解析结果`REF_getStatic`、`REF_putStatic`、`REF_invokeStatic`句柄对应的类没有初始化，则初始化
 
-除了以上七种情况，其他使用Java类的方式都被看作是对类的被动使用，都不会导致类的初始化
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+除了以上七种情况，其他使用Java类的方式都被看作是对**类的被动使用**，都**不会导致类的初始化**。
