--- a/jvm/docs/内存与垃圾回收/02_运行时数据区.md
+++ b/jvm/docs/内存与垃圾回收/02_运行时数据区.md
@@ -325,7 +325,114 @@ public class AnimalTest {
 
   5、`invokedynamic`：动态解析出需要调用的方法，然后执行。（Lambda表达式）
 
-`invokestatic`指令和`invokespecial`指令调用的方法非虚方法，其余的（`final`修饰的除外）称为虚方法。
+**`invokestatic`指令和`invokespecial`指令调用的方法非虚方法，其余的（`final`修饰的除外）称为虚方法。**
+
+```java
+/**
+ * 解析调用中非虚方法、虚方法的测试
+ *
+ * invokestatic指令和invokespecial指令调用的方法称为非虚方法
+ * @author shkstart
+ * @create 2020 下午 12:07
+ */
+class Father {
+    public Father() {
+        System.out.println("father的构造器");
+    }
+
+    public static void showStatic(String str) {
+        System.out.println("father " + str);
+    }
+
+    public final void showFinal() {
+        System.out.println("father show final");
+    }
+
+    public void showCommon() {
+        System.out.println("father 普通方法");
+    }
+}
+
+public class Son extends Father {
+    public Son() {
+        //invokespecial
+        super();
+    }
+    public Son(int age) {
+        //invokespecial
+        this();
+    }
+    //不是重写的父类的静态方法，因为静态方法不能被重写！
+    public static void showStatic(String str) {
+        System.out.println("son " + str);
+    }
+    private void showPrivate(String str) {
+        System.out.println("son private" + str);
+    }
+
+    public void show() {
+        //invokestatic
+        showStatic("atguigu.com");
+        //invokestatic
+        super.showStatic("good!");
+        //invokespecial
+        showPrivate("hello!");
+        //invokespecial
+        super.showCommon();
+
+        //invokevirtual
+        showFinal();//因为此方法声明有final，不能被子类重写，所以也认为此方法是非虚方法。
+        //虚方法如下：
+        //invokevirtual
+        showCommon();
+        info();
+
+        MethodInterface in = null;
+        //invokeinterface
+        in.methodA();
+    }
+
+    public void info(){
+
+    }
+
+    public void display(Father f){
+        f.showCommon();
+    }
+
+    public static void main(String[] args) {
+        Son so = new Son();
+        so.show();
+    }
+}
+
+interface MethodInterface{
+    void methodA();
+}
+```
+
+```class
+ 0 ldc #11 <atguigu.com>
+ 2 invokestatic #12 <com/atguigu/java2/Son.showStatic : (Ljava/lang/String;)V>
+ 5 ldc #13 <good!>
+ 7 invokestatic #14 <com/atguigu/java2/Father.showStatic : (Ljava/lang/String;)V>
+10 aload_0
+11 ldc #15 <hello!>
+13 invokespecial #16 <com/atguigu/java2/Son.showPrivate : (Ljava/lang/String;)V>
+16 aload_0
+17 invokespecial #17 <com/atguigu/java2/Father.showCommon : ()V>
+20 aload_0
+21 invokevirtual #18 <com/atguigu/java2/Son.showFinal : ()V>
+24 aload_0
+25 invokevirtual #19 <com/atguigu/java2/Son.showCommon : ()V>
+28 aload_0
+29 invokevirtual #20 <com/atguigu/java2/Son.info : ()V>
+32 aconst_null
+33 astore_1
+34 aload_1
+35 invokeinterface #21 <com/atguigu/java2/MethodInterface.methodA : ()V> count 1
+40 return
+```
 
 #### 虚方法表
 
@@ -338,23 +445,41 @@ public class AnimalTest {
 ### 方法返回地址
 
 - 存放调用该方法的PC寄存器的值。
-- 正常退出，调用者的PC寄存器的值作为返回地址，即调用该方法的指令的下一条指令的地址。异常退出，返回地址是要通过异常表来确定，栈帧中一般不会保存这部分信息。 
+- 一个方法的结束，有两种方式：
+  - 正常执行完成
+  - 出现未处理的异常，非正常退出
+- 无论通过哪种方式退出，在方法退出后都返回到该方法被调用的位置。方法正常退出时，**调用者的PC寄存器的值作为返回地址，即调用该方法的指令的下一条指令的地址**。异常退出，返回地址是要通过异常表来确定，栈帧中一般不会保存这部分信息。 
+
+当一个方法开始执行后，只有两种方式可以退出这个方法：
+
+1、执行引擎遇到任何一个方法返回的字节码指令（`return`），会有返回值传递给上层的方法调用者，简称**正常完成出口**。
+
+- 一个方法在正常调用完成之后究竟需要使用哪一个返回指令还需要根据方法返回值的实际数据类型而定。
+- 在字节码指令中，返回指令包含`ireturn`（当返回值是`boolean`、`byte`、`char`、`short`、`int`类型时使用）、`lreturn`、`freturn`、`dreturn`以及`areturn`，另外还有一个`return`指令供声明为`void`的方法、实例初始化方法、类和接口的初始化方法使用。
+
+2、在方法执行的过程中遇到了异常（`Exception`），并且这个异常没有在方法内进行处理，也就是只要在本方法的异常表中没有搜索到匹配的异常处理器，就会导致方法退出。简称`异常完成出口`。
+
+- 方法执行过程中抛出异常时的异常处理，存储在一个异常处理表，方便在发生异常的时候找到处理异常的代码。
+
+![image-20211227193347817](images/image-20211227193347817.png)
+
+**正常完成出口和异常完成出口的区别在于：通过异常完成出口退出的不会给它的上层调用者产生任何的返回值。**
 
 ### 附加信息
 
 ## 本地方法栈
 
-- Java虚拟机栈用于管理Java方法的调用，而本地方法栈用于管理本地方法的调用。
-
-- 线程私有的。
-- 允许被是线程固定或者可动态扩展的内存大小。
+- **Java虚拟机栈用于管理Java方法的调用，而本地方法栈用于管理本地方法的调用。**
+- 本地方法栈，也是线程私有的。
+- 允许被是线程固定或者可动态扩展的内存大小。（在内存溢出方面是相同的）
+  - 如果线程请求分配的栈容量超过本地方法栈允许的最大容量，Java虚拟机将会抛出一个`StackOverflowError`异常。
+  - 如果本地方法栈可以动态扩展，并且在尝试扩展的时候无法申请到足够的内存，或者在创建新的线程时没有足够的内存去创建对应的本地方法栈，那么Java虚拟机将会抛出一个`OutOfMemoryError`异常。
 - 本地方法是使用C语言实现的。
 - Native Method Stack中登记native方法，在Execution Engine执行时加载本地方法库。
-- 当某个线程调用一个本地方法时，他就进入了一个全新的并且不再受虚拟机限制的世界，它和虚拟机拥有同样的权限。
-  - 本地方法可以通过本地方法接口来访问虚拟机内部的运行时数据区。
+- **当某个线程调用一个本地方法时，他就进入了一个全新的并且不再受虚拟机限制的世界，它和虚拟机拥有同样的权限**。
+  - 本地方法可以通过本地方法接口来**访问虚拟机内部的运行时数据区**。
   - 它甚至可以直接使用本地处理器中的寄存器。
   - 直接从本地内存的堆中分配任意数量的内存。
-
 - 并不是所有的JVM都支持本地方法。因为Java虚拟机规范没有明确要求本地方法栈的使用语言、具体实现方式、数据结构等。
 - 在HotSpot JVM中，直接将本地方法栈和虚拟机栈合二为一。
 
@@ -365,14 +490,15 @@ public class AnimalTest {
 - 一个JVM实例只存在一个堆内存，也是Java内存管理的核心区域。
 - Java堆区在JVM启动的时候即被创建，其空间大小也就确定了。是JVM管理的最大一块内存空间。
   - 堆内存的大小是可以调节的。
-- 《Java虚拟机规范》规定，堆可以处于物理上不连续的内存空间中，但在逻辑上它应该被视为连续的。
+- 《Java虚拟机规范》规定，堆可以处于**物理上不连续**的内存空间中，但在**逻辑上**它应该被视为**连续**的。
 - 所有的线程共享Java堆，在这里还可以划分线程私有的缓冲区（Thread Local Allocation Buffer，TLAB）。
-
 - 《Java虚拟机规范》中对Java堆的描述是：所有的对象实例以及数组都应当在运行时分配在堆上。
-  - 从实际使用角度看，几乎所有的对象实例都在堆上分配内存。
+  - 从实际使用角度看，**几乎**所有的对象实例都在堆上分配内存。
 - 数组和对象可能永远不会存储在栈上，因为栈帧中保存引用，这个引用指向对象或者数组在堆中的位置。
 - 在方法结束后，堆中的对象不会马上被移除，仅仅在垃圾收集的时候才会被移除。
 - 堆是GC执行垃圾回收的重点区域。
+
+![image-20211227204630444](images/image-20211227204630444.png)
 
 ### 内存细分
 
@@ -383,26 +509,93 @@ public class AnimalTest {
 
 - `-Xms`用来表示堆区（年轻代+老年代）的起始内存，等价于`-XX:InitialHeapSize`。
 - `-Xmx`用来表示堆区的最大内存，等价于`-XX:MaxHeapSize`。
+- 一旦堆区中的内存大小超过`-Xmx`所指定的最大内存时，将会抛出`OutOfMemoryError`异常。
 - 通常会将`-Xms`和`-Xmx`两个参数配置相同的值，目的是**为了能够在java垃圾回收机制清理完堆区后不需要重新分隔计算堆区的大小，从而提高性能。**
-
 - 默认情况下，初始内存大小是电脑内存大小的1/64，最大内存大小是电脑内存大小的1/4。
+
+```java
+/**
+ * 1. 设置堆空间大小的参数
+ * -Xms 用来设置堆空间（年轻代+老年代）的初始内存大小
+ *      -X 是jvm的运行参数
+ *      ms 是memory start
+ * -Xmx 用来设置堆空间（年轻代+老年代）的最大内存大小
+ *
+ * 2. 默认堆空间的大小
+ *    初始内存大小：物理电脑内存大小 / 64
+ *             最大内存大小：物理电脑内存大小 / 4
+ * 3. 手动设置：-Xms600m -Xmx600m
+ *     开发中建议将初始堆内存和最大的堆内存设置成相同的值。
+ *
+ * 4. 查看设置的参数：方式一： jps   /  jstat -gc 进程id
+ *                  方式二：-XX:+PrintGCDetails
+ */
+public class HeapSpaceInitial {
+    public static void main(String[] args) {
+
+        //返回Java虚拟机中的堆内存总量
+        long initialMemory = Runtime.getRuntime().totalMemory() / 1024 / 1024;
+        //返回Java虚拟机试图使用的最大堆内存量
+        long maxMemory = Runtime.getRuntime().maxMemory() / 1024 / 1024;
+
+        System.out.println("-Xms : " + initialMemory + "M");
+        System.out.println("-Xmx : " + maxMemory + "M");
+
+//        System.out.println("系统内存大小为：" + initialMemory * 64.0 / 1024 + "G");
+//        System.out.println("系统内存大小为：" + maxMemory * 4.0 / 1024 + "G");
+
+        try {
+            Thread.sleep(1000000);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
 
 ### 年轻代和老年代
 
 ![年轻代和老年代](../images/年轻代和老年代.png)
 
+- 存储在JVM中的Java对象可以被划分为两类：
+  - 一类是生命周期较短的瞬时对象，这类对象的创建和消亡都非常迅速
+  - 另外一类对象的生命周期非常长，在某些极端的情况下还能够与JVM的生命周期保持一致
+
 - 配置新生代与老年代在堆结构的占比，一般不会修改
 
   - 默认`-XX:NewRatio`=2，表示新生代占1，老年代占2，新生代占整个堆的1/3。
-
 - 在HotSpot中，Eden空间和另外两个Survivor空间缺省所占的比例是8:1:1。
 - 当然开发人员可通过`-XX:SurvivorRatio=8`调整这个空间比例。（需要显示设置）
   - `-XX:-UseAdaptiveSizePolicy`：关闭自适应的内存分配策略
-- 几乎所有的Java对象都是在Eden区内new出来的。
+- **几乎所有的J**ava对象都是在Eden区内new出来的。
 - 绝大部分的Java对象的销毁都在新生代进行了。
 - 可以使用选项`-Xmn`新生代的空间大小。 （一般不设置）
 
-### 对象分配过程
+```java
+/**
+ * -Xms600m -Xmx600m
+ *
+ * -XX:NewRatio ： 设置新生代与老年代的比例。默认值是2.
+ * -XX:SurvivorRatio ：设置新生代中Eden区与Survivor区的比例。默认值是8
+ * -XX:-UseAdaptiveSizePolicy ：关闭自适应的内存分配策略  （暂时用不到）
+ * -Xmn:设置新生代的空间的大小。 （一般不设置）
+ *
+ */
+public class EdenSurvivorTest {
+    public static void main(String[] args) {
+        System.out.println("我只是来打个酱油~");
+        try {
+            Thread.sleep(1000000);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
+
+### 图解对象分配过程
+
+**一般过程**
 
 ![对象分配过程](../images/对象分配过程.png)
 
@@ -426,14 +619,40 @@ JVM在进行GC时，并非每次都对上面三个内存（新生代、老年代
   - 新生代收集（Minor GC/Young GC）：只是新生代（Eden/s0，s1）的垃圾收集
   - 老年代收集（Major GC/Old GC）：只是老年代的垃圾收集。
     - 目前，只有CMS GC会有单独收集老年代的行为。
-    - 注意，很多时候Major GC和Full GC混淆使用，需要具体分辨是老年代回收还是整堆回收。
+    - **注意，很多时候Major GC和Full GC混淆使用，需要具体分辨是老年代回收还是整堆回收。**
   - 混合收集（Mixed GC）：收集整个新生代以及部分老年代的垃圾收集。
     - 目前，只有G1 GC会有这种行为。
 - 整堆收集（Full GC）：收集整个Java堆和方法区的垃圾收集。
 
+- 年轻代GC（Minor GC）触发机制：
+
+  - 当年轻代空间不足时，就会触发Minor GC，这里的年轻代满指的是Eden区满，Survivor满不会引发GC。（每次Minor GC会清理年轻代的内存）
+  - 因为Java对象**大多都具备朝生夕死**的特性，所以Minor GC非常频繁，一般回收速度也比较快。这一定义既清晰又易于理解。
+  - Minor GC会引发STW，暂停其他用户的线程，等垃圾回收结束，用户线程才恢复运行。
+
+- 老年代GC（Major GC/Full GC）触发机制：
+
+  - 指发生在老年代的GC，对象从老年代消失时，我们说Major GC或 Full GC发生了。
+  - 出现了Major GC，经常会伴随着至少一次的Minor GC（但非绝对，在Parallel Scavenge收集器的收集策略里就有直接进行Major GC的策略选择过程）
+    - 也就是在老年代空间不足时，会先尝试触发Minor GC。如果之后空间不足，就触发Major GC。
+  - Major GC的速度一般比Minor GC慢10倍以上，STW的时间更长。
+  - 如果Major GC后，内存还不足，就报OOM了。
+
+- Full GC触发机制：（后面细讲）
+
+  - 调用System.gc()时，系统建议执行Full GC，但是不必然执行
+  - 老年代空间不足
+  - 方法区空间不足
+  - 通过Minor GC后进入老年代的平均大小大于老年代的可用内存
+  - 由Eden区、survivor space0（From Space）区向Survivor space1（To Space）区复制时，对象大小大于To Space可用内存，则把该对象转存到老年代，且老年代的可用内存小于该对象大小
+
+  **说明：Full GC是开发或调优中尽量要避免的，这样暂停时间会短一些。**
+
 ### 堆空间分代思想
 
-- 不同对象的声明周期不同，70%-99%的对象是临时对象
+为什么需要把Java堆分代？不分代就不能正常工作了吗？
+
+- 经研究，不同对象的声明周期不同，70%-99%的对象是临时对象。
 
 - 不分代也完全可以，分代的唯一理由就是**优化GC性能**。
 
@@ -441,6 +660,7 @@ JVM在进行GC时，并非每次都对上面三个内存（新生代、老年代
 
 - 优先分配到Eden
 - 大对象直接分配到老年代
+  - 尽量避免程序中出现过多的大对象
 - 长期存活的对象分配到老年代
 - 动态对象年龄判断
   - 如果Survivor区中相同年龄的所有对象大小的总和大于Survivor空间的一半，年龄大于或等于该年龄的对象可以直接进入老年代，无需等到`MaxTenuringThreshold`中要求的年龄。
@@ -449,7 +669,7 @@ JVM在进行GC时，并非每次都对上面三个内存（新生代、老年代
 
 ### 对象分配过程：TLAB
 
-为什么有TLAB？
+为什么有TLAB（Thread Local Allocation Buffer）？
 
 - 堆区是线程共享区域，任何线程都可以访问到堆区中的共享数据
 - 由于对象实例的创建在JVM中非常频繁，因此在并发环境下从堆区划分内存空间时线程不安全的
@@ -459,11 +679,11 @@ JVM在进行GC时，并非每次都对上面三个内存（新生代、老年代
 
 什么是TLAB？
 
-- 从内存模型而不是垃圾收集的角度，对Eden区域继续进行划分，JVM为每个线程分配了一个私有的缓存区域，它包含在Eden空间内。
-- 多线程同时分配内存时，使用TLAB可以避免线程安全问题，不会考虑线程同步，同时还能够提升内存分配的吞吐量，这种内存分配方式称为快速分配策略。
-- 尽管不是所有的对象实例都能在TLAB中成功分配内存，但JVM确实是将TLAB作为内存分配的首选。
+- 从内存模型而不是垃圾收集的角度，对Eden区域继续进行划分，JVM为**每个线程分配了一个私有的缓存区域**，它包含在Eden空间内。
+- 多线程同时分配内存时，使用TLAB可以避免线程安全问题，不会考虑线程同步，同时还能够提升内存分配的吞吐量，这种内存分配方式称为**快速分配策略**。
+- 尽管不是所有的对象实例都能在TLAB中成功分配内存，但**JVM确实是将TLAB作为内存分配的首选**。
 - 可以通过`-XX:UseTLAB`设置是否开启TLAB空间。默认是开启的。
-- TLAB空间的内存非常小，仅占有这个Eden空间的1%，可通过`-XX:TLABWastTargetPercent`设置TLAB空间占用Eden空间的百分比大小。
+- TLAB空间的内存非常小，**仅占有这个Eden空间的1%**，可通过`-XX:TLABWastTargetPercent`设置TLAB空间占用Eden空间的百分比大小。
 - 一旦对象在TLAB空间分配内存失败，JVM会通过**使用加锁机制**确保数据操作的原子性，从而直接在Eden空间中分配内存。
 
 ![TLAB分配](../images/TLAB分配.png)
@@ -490,16 +710,16 @@ JVM在进行GC时，并非每次都对上面三个内存（新生代、老年代
 
 `-XX:HandlePromotionFailure`：是否设置空间分配担保
 
-在发生Minor GC之前，虚拟机会检查老年代最大可用的连续空间是否大于新生代所有的对象的总空间。
+在发生Minor GC之前，虚拟机会**检查老年代最大可用的连续空间是否大于新生代所有的对象的总空间**。
 
 - 如果大于，则此次Minor GC是安全的
 - 如果小于，则虚拟机会查看`-XX:HandlePromotionFailure`设置值是否允许担保失败。
-  - 如果`HandlePromotionFailure=true`，那么会继续检查老年代最大可用连续空间是否大于历次晋升到老年代的对象的平均大小。
+  - 如果`HandlePromotionFailure=true`，那么会继续检查**老年代最大可用连续空间是否大于历次晋升到老年代的对象的平均大小**。
     - 如果大于，则尝试进行一次Minor GC，但这次Minor GC依然是有风险的。
     - 如果小于，则改为进行一次Full GC。
   - 如果`HandlePromotionFailure=false`，则改为进行一次Full GC。
 
-在JDK7及以后，`HandlePromotionFailure`参数不会再影响到虚拟机的空间分配担保策略。只要老年代的连续空间大于新生代对象总大小或者历次晋升的平均大小就会进行Minor GC，否则进行Full GC。
+在JDK7及以后，`HandlePromotionFailure`参数不会再影响到虚拟机的空间分配担保策略。**只要老年代的连续空间大于新生代对象总大小**或者**历次晋升的平均大小就会进行Minor GC**，否则进行Full GC。
 
 ### 堆是分配对象存储的唯一选择吗？
 
