--- a/jvm/docs/内存与垃圾回收/02_运行时数据区.md
+++ b/jvm/docs/内存与垃圾回收/02_运行时数据区.md
@@ -723,7 +723,9 @@ JVM在进行GC时，并非每次都对上面三个内存（新生代、老年代
 
 ### 堆是分配对象存储的唯一选择吗？
 
-如果经过逃逸分析（Escape Analysis）后发现，一个对象并没有逃逸出方法的话，那么就可能被优化成栈上分配。这样就无需在堆上分配内存，也无需进行垃圾回收了。这也是最常见的堆外存储技术。
+随着JIT编译器的发展与逃逸分析技术逐渐成熟，**栈上分配、标量替换优化技术**将会导致一些微秒的变化，所有的对象都分配到堆上也逐渐变得不那么绝对了。
+
+**如果经过逃逸分析（Escape Analysis）后发现，一个对象并没有逃逸出方法的话，那么就可能被优化成栈上分配。**这样就无需在堆上分配内存，也无需进行垃圾回收了。这也是最常见的堆外存储技术。
 
 基于OpenJDK深度定制的TaoBaoVM，其中创新的GCIH（GC invisible heap）技术实现off-heap，将生命周期较长的Java对象从heap中移至heap外，并且GC不能管理GCIH内部的Java对象，以此达到降低GC的回收频率和提升GC的回收效率的目的。
 
@@ -733,6 +735,7 @@ JVM在进行GC时，并非每次都对上面三个内存（新生代、老年代
 - 当一个对象在方法中被定义后，它被外部方法所引用，则认为发生逃逸。
 
 ```java
+// 不逃出方法，栈上分配
 public static String method(String str) {
     StringBuffer stringBuffer = new StringBuffer();
     stringBuffer.append(str);
@@ -740,7 +743,45 @@ public static String method(String str) {
 }
 ```
 
-> 快速判断是否发生逃逸分析：看new的对象实体是否有可能在方法外被调用
+> 快速判断是否发生逃逸分析：看new的==对象实体==是否有可能在方法外被调用
+
+```java
+/**
+ *  如何快速的判断是否发生了逃逸分析，大家就看new的对象实体是否有可能在方法外被调用。
+ */
+public class EscapeAnalysis {
+
+    public EscapeAnalysis obj;
+
+    /*
+    方法返回EscapeAnalysis对象，发生逃逸
+     */
+    public EscapeAnalysis getInstance(){
+        return obj == null? new EscapeAnalysis() : obj;
+    }
+    /*
+    为成员属性赋值，发生逃逸
+     */
+    public void setObj(){
+        this.obj = new EscapeAnalysis();
+    }
+    //思考：如果当前的obj引用声明为static的？仍然会发生逃逸。
+
+    /*
+    对象的作用域仅在当前方法中有效，没有发生逃逸
+     */
+    public void useEscapeAnalysis(){
+        EscapeAnalysis e = new EscapeAnalysis();
+    }
+    /*
+    引用成员变量的值，发生逃逸
+     */
+    public void useEscapeAnalysis1(){
+        EscapeAnalysis e = getInstance();
+        //getInstance().xxx()同样会发生逃逸
+    }
+}
+```
 
 #### 参数设置
 
@@ -752,18 +793,116 @@ public static String method(String str) {
 
 #### 代码优化
 
-使用逃逸分析，编译器可以对代码做如下优化
+使用逃逸分析，编译器可以对代码做如下优化：
 
-- **栈上分配。**
+- **栈上分配。**将堆分配转化为栈分配。如果一个对象在子程序中被分配，要使指向该对象的指针永远不会逃逸，对象可能是栈分配的候选，而不是堆分配。
 
-- **同步省略。**如果一个对象被发现只能从一个线程被访问到，那么对于这个对象的操作可以不考虑同步。动态编译同步块的时候，JIT编译器可以借助逃逸分析**判断同步块所使用的锁对象是否只能被一个线程访问而没有被发布到其他线程**。如果没有，就会取消对这部分代码的同步，也叫**锁消除**。
+- **同步省略。**如果一个对象被发现只能从一个线程被访问到，那么对于这个对象的操作可以不考虑同步。
 
-- **标量替换或分离对象 。**
-  - 标量（Scalar）是指一个无法再分解成更小的数据的数据。Java中的基本数据类型就是标量。
-  - 相对的，还可以分解的数据叫做**聚合量（Aggregate）**，Java中的对象就是聚合量。
-  - 在JIT阶段，如果经过逃逸分析，发现一个对象不会被外界访问的话，经过JIT优化，就会把这个对象拆解成若干个其中包含若干个成员变量来代替，这个过程就是**标量替换。**
+- **标量替换或分离对象 。**有的对象可能不需要作为一个连续的内存结果存在也可以被访问到，那么对象的部分（或全部）可以不存在内存，而是存储在CPU寄存器中。
+
+##### 代码优化之栈上分配
+
+- JIT编译器在编译期间根据逃逸分析的结果，发现如果一个对象并没有逃逸出方法的话，就可能被优化成栈上分配。分配完成后，继续在调用栈内执行，最后线程结束，栈空间被回收，局部变量对象也被回收。这样就无需进行垃圾回收了。
+- **常见的栈上分配的场景**
+  - 在逃逸分析中，已经说明了。分别是给成员变量赋值、方法返回值、实例引用传递。
+
+```java
+/**
+ * 栈上分配测试，使用visualVM查看User对象数量
+ * -Xmx1G -Xms1G -XX:-DoEscapeAnalysis -XX:+PrintGCDetails
+ */
+public class StackAllocation {
+    public static void main(String[] args) {
+        long start = System.currentTimeMillis();
+
+        for (int i = 0; i < 10000000; i++) {
+            alloc();
+        }
+        // 查看执行时间
+        long end = System.currentTimeMillis();
+        System.out.println("花费的时间为： " + (end - start) + " ms");
+        // 为了方便查看堆内存中对象个数，线程sleep
+        try {
+            Thread.sleep(1000000);
+        } catch (InterruptedException e1) {
+            e1.printStackTrace();
+        }
+    }
+
+    private static void alloc() {
+        User user = new User();//未发生逃逸
+    }
+
+    static class User {
+
+    }
+}
+```
+
+##### 代码优化之同步省略（消除）
+
+- 线程同步的代价是相当高的，同步的后果是降低并发性和性能。
+- 在动态编译同步块的时候，JIT编译器可以借助逃逸分析来**判断同步块所使用的锁对象是否只能被一个线程访问而没有被发布到其他线程**。如果没有，那么JIT编译器在编译这个同步块的时候就会取消对这部分代码的同步。这样就能大大提高并发性和性能。这个取消同步的过程就叫同步省略，也叫**锁消除**。
+
+![image-20211228110725674](images/image-20211228110725674.png)
+
+##### 代码优化之标量替换
+
+- **标量（Scalar）**是指一个无法再分解成更小的数据的数据。Java中的基本数据类型就是标量。
+- 相对的，还可以分解的数据叫做**聚合量（Aggregate）**，Java中的对象就是聚合量。
+- 在JIT阶段，如果经过逃逸分析，发现一个对象不会被外界访问的话，经过JIT优化，就会把这个对象拆解成若干个其中包含若干个成员变量来代替，这个过程就是**标量替换。**
+
+![image-20211228132122919](images/image-20211228132122919.png)
+
+以上代码，经过标量替换，就会变成：
+
+![image-20211228132151849](images/image-20211228132151849.png)
+
+可以看到，Point这个聚合量经过逃逸分析后，发现他并没有逃逸，就被替换成两个聚合量了。那么标量替换有什么好处呢？就是可以大大减少堆内存的占用。因为一旦不需要创建对象了，那么就不再需要分配堆内存了。
+
+标量替换为栈上分配提供了很好的基础。
 
 **标量替换参数设置**：`-XX:+EliminateAllocations`默认开启，允许将对象打散分配到栈上。
+
+```java
+/**
+ * 标量替换测试
+ *  -Xmx100m -Xms100m -XX:+DoEscapeAnalysis -XX:+PrintGC -XX:-EliminateAllocations
+ */
+public class ScalarReplace {
+    public static class User {
+        public int id;
+        public String name;
+    }
+
+    public static void alloc() {
+        User u = new User();//未发生逃逸
+        u.id = 5;
+        u.name = "www.atguigu.com";
+    }
+
+    public static void main(String[] args) {
+        long start = System.currentTimeMillis();
+        for (int i = 0; i < 10000000; i++) {
+            alloc();
+        }
+        long end = System.currentTimeMillis();
+        System.out.println("花费的时间为： " + (end - start) + " ms");
+    }
+}
+```
+
+![image-20211228133032219](images/image-20211228133032219.png)
+
+#### 逃逸分析小结：逃逸分析并不成熟
+
+- 关于逃逸分析的论文在1999年就已经发表了，但知道JDK1.6才有实现，而且这项技术如今也并不是十分成熟的。
+- 其根本原因就是**无法保证逃逸分析的性能消耗一定能高于它的消耗。虽然经过逃逸分析可以做标量替换、栈上分配、和锁消除。但是逃逸分析自身也是需要进行一系列复杂的分析的，这其实也是一个相对耗时的过程。**
+- 一个极端的例子，就是经过逃逸分析之后，发现没有一个对象是不逃逸的，那这个逃逸分析的过程就白白浪费掉了。
+- 虽然这项技术并不十分成，但是它也**是即时编译器优化技术中一个十分重要的手段**。
+- 注意到有一些观点，认为通过逃逸分析，JVM会在栈上分配哪些不会逃逸的对象，这在理论上是可行的，但是取决于JVM设计者的选择。据我所知，Oracle HotSpot JVM中并未这么做，这一点在逃逸分析相关的文档里已经说明，所以可以明确所有的对象实例都是创建在堆上。
+- 目前很多书籍还是基于JDK 7以前的版本，JDK已经发生了很多变化，intern字符串的缓存和静态变量曾经都分配在永久代上，而永久代已经被元空间取代。但是intern字符串缓存和静态变量并不是被转移到元数据区，而是直接在堆上分配，所以这一点同样符合前面一点的结论：对象实例都是分配在堆上。
 
 ## 方法区
 
