--- a/jvm/docs/内存与垃圾回收/03_程序计数器.md
+++ b/jvm/docs/内存与垃圾回收/03_程序计数器.md
@@ -1,50 +1,4 @@
-# 运行时数据区
-
-![运行时数据区](../images/运行时数据区.png)
-
-- 每个线程：程序计数器、栈、本地栈。
-- 线程间共享：堆、堆外内存（永久代或元空间、代码缓存）。
-  - 每个JVM只有一个`Runtime`实例
-
-## 线程
-
-- 线程是一个程序里的运行单元。JVM允许一个应用有多个线程运行的执行。
-- 在HotSpot JVM里，每个线程都与操作系统的本地线程直接映射。
-  - 当一个Java线程准备好执行之后，此时一个操作系统的本地线程也同时创建。Java线程执行终止后，本地线程也会回收。
-- 操作系统负责所有线程的安排调度到任何一个可用的CPU上。一旦本地线程初始化成功，它就会调用Java线程中的`run()`方法。
-
-## 程序计数器（PC寄存器）
-
-PC寄存器用来存储指向下一条指令的地址，也即将要执行的指令代码。由执行引擎读取下一条指令。
-
-![image-20211227120205305](images/image-20211227120205305.png)
-
-- 它是一块很小的内存空间，几乎可以忽略不计。也是运行最快的存储区域。
-- 在JVM规范中，每个线程都有它自己的程序计数器，是线程私有的，生命周期与线程的生命周期保持一致。
-- 任何时间一个线程都只有一个方法在执行，也就是所谓的当前方法。程序计数器会存储当前线程正在执行的Java方法的JVM指令地址；或者，如果是在执行native方法，则是未指定值（undefined）。
-- 它是程序控制流的指示器，分支、循环、跳转、异常处理、线程恢复等基础功能都需要依赖这个计数器来完成。
-- 字节码解释器工作时就是通过改变这个计数器的值来选取下一条需要执行的字节码指令。
-- 它是唯一一个在Java虚拟机中没有任何`OutOfMemoryError`情况的区域。
-
-![PC寄存器](../images/PC寄存器.png)
-
-### 两个常见问题
-
-**使用PC寄存器存储字节码指令地址有什么用呢？为什么使用PC寄存器记录当前线程的执行地址呢？**
-
-![image-20211227121613877](images/image-20211227121613877.png)
-
-因为CPU需要不停的切换各个线程，这时候切换回来后，就得知道接着从哪开始继续执行。
-
-JVM字节码解释器就需要通过改变PC寄存器的值来明确下一条应该执行什么样的字节码指令。
-
-**PC寄存器为什么会被设定为线程私有？**
-
-![image-20211227130800926](images/image-20211227130800926.png)
-
-我们知道多线程在一个特定的时间段内只会执行某一个线程的方法，CPU会不停地任务切换，这样必会导致经常中断或回复，如何保证分毫无差呢？为了能够准确地记录各个线程正在执行的当前字节码指令地址，最好的办法自然是为每一个线程都分配一个PC寄存器，这样一来各个线程之间便可以进行独立计算，从而不会出现相互干扰的情况。
-
-## 虚拟机栈
+# 虚拟机栈
 
  Java的指令都是根据栈来设计的，优点是跨平台，指令集小，编译器容易实现，缺点是性能下降，实现同样的功能需要更多的指令。
 
@@ -75,7 +29,7 @@ public class Main {
 
 > -Xss256k：设置栈的大小
 
-### 栈的存储单位
+## 栈的存储单位
 
 ![栈运行原理](../images/栈运行原理.png)
 
@@ -83,7 +37,7 @@ public class Main {
 - 在这个线程上正在执行的每个方法都各自对应一个栈帧。
 - 栈帧是一个内存区块，是一个数据集，维系着方法执行过程中的各种数据信息。
 
-### 栈的运行原理
+## 栈的运行原理
 
 - JVM直接对Java栈的操作只有两个，就是对栈帧的**压栈**和**出栈**，遵循“先进后出”（FILO）原则。
 - 在一条活动线程中，一个时间点上，只有一个活动的栈帧。只有当前正在执行的方法的栈帧是有效的，这个栈帧被称为**当前栈帧**，与当前栈帧对应的方法就是当前方法，定义这个方法的类就是**当前类**。
@@ -93,7 +47,7 @@ public class Main {
 - 如果当前方法调用了其他方法 ，方法返回之际，当前栈帧会传回此方法的执行结果给前一个帧，接着虚拟机会丢弃当前栈帧，使得前一个栈帧重新成为当前栈帧。
 - Java方法有两种返回函数的方式，**一种是正常的函数返回，使用`return`指令；另外一种是抛出异常。不管使用哪种方式，都会导致栈帧被弹出**。
 
-### 栈帧的内部结构
+## 栈帧的内部结构
 
 - **局部变量表（Local Variables）**
 - **操作数栈（Operand Stack 或 表达式栈）**
@@ -101,7 +55,7 @@ public class Main {
 - 方法返回地址（Return Address）（方法正常退出或者异常退出的定义）
 - 一些附加信息
 
-### 局部变量表
+## 局部变量表
 
 - **定义为一个数字数组，主要用于存储方法参数和定义在方法体内的局部变量**，这些数据类型包括各类基本数据类型、对象引用（reference）、以及`returnAddress`类型。
 - 建立在线程的栈上，是线程的私有数据，**不存在数据安全问题**。
@@ -109,7 +63,7 @@ public class Main {
 - **方法嵌套调用的次数由栈的大小决定。一般来说，栈越大，方法嵌套调用次数越多。**
 - **局部变量表中的变量只在当前方法调用中有效**。在方法执行时，虚拟机通过使用局部变量表完成参数值到参数变量列表的传递过程。**当方法调用结束后，随着方法栈帧的销毁，局部变量表也会随之销毁。** 
 
-#### 关于slot的理解
+### 关于slot的理解
 
 - 参数值的存放总是在局部变量数组的index 0开始，到数组长度-1的索引结束。
 
@@ -137,7 +91,7 @@ public void method1(){
 
 ![局部变量表demo](../images/局部变量表demo.png)
 
-#### slot的重复利用
+### slot的重复利用
 
 **栈帧中的局部变量表的槽位是可以重用的**，如果一个局部变量过了其作用域，那么在其作用域之后声明的新的局部变量就很有可能复用过期局部变量的槽位，从而**达到节省资源的目的**。
 
@@ -155,7 +109,7 @@ public void method2(){
 
 ![局部变量表demo2](../images/局部变量表demo2.png)
 
-#### 静态变量和局部变量的对比
+### 静态变量和局部变量的对比
 
 ```java
 /**
@@ -167,12 +121,12 @@ public void method2(){
  */
 ```
 
-#### 补充说明
+### 补充说明
 
 - 在栈帧中，与性能调优关系最为密切的部分就是局部变量表。在方法执行时，虚拟机使用局部变量表完成方法的传递。
 - **局部变量表中的变量也是重要的垃圾回收根节点，只要被局部变量表中直接或间接引用的对象都不会被回收。**
 
-### 操作数栈
+## 操作数栈
 
 - 每一个独立的栈帧中除了包含局部变量表以外，还包含一个后进先出的操作数栈。
 - 在方法执行过程中，根据字节码指令，往栈中写入数据或提取数据，即入栈（push）/出栈（pop）。
@@ -190,7 +144,7 @@ public void method2(){
 - 操作数栈中元素的数据类型必须与字节码指令的序列严格匹配，并由编译器在编译期间进行验证，同时再类加载过程中的类检验阶段的数据流分析阶段要再次验证。
 - 另外，我们说Java虚拟机的**解释引擎是基于栈的执行引擎**，其中的栈指的就是操作数栈。
 
-#### 代码追踪
+### 代码追踪
 
 ```java
 public void test() {
@@ -209,13 +163,13 @@ public void test() {
 
 ![image-20211227162903602](images/image-20211227162903602.png)
 
-### 栈顶缓存（Top-of-Stack Cashing）技术
+## 栈顶缓存（Top-of-Stack Cashing）技术
 
 基于栈式架构的虚拟机所使用的零地址指令更加紧凑，但完成一项操作的时候必然需要使用更多的入栈和出栈指令，这同时也就意味着将更多的指令分派次数和内存读/写次数。
 
 由于操作数是存储在内存中的，因此频繁地执行内存读/写操作必然会影响执行速度。为了解决这个问题，HotSpot JVM的设计者们提出了栈顶缓存技术，**将栈顶元素全部缓存在物理CPU的寄存器中，依次降低对内存的读/写次数，提升执行引擎的执行效率**。
 
-### 动态链接（或指向运行时常量池的方法引用）
+## 动态链接（或指向运行时常量池的方法引用）
 
 - 每个栈帧内部都包含一个**指向运行时常量池**中**该栈帧所属方法的引用**，包含这个引用的目的就是为了支持当前方法的代码能够实现动态链接（Dynamic Linking）。比如：invokeDynamic指令。
 
@@ -227,9 +181,9 @@ public void test() {
 
 常量池的作用，就是为了提供一些符号和常量，便于指令的识别。
 
-### 方法的调用
+## 方法的调用
 
-####  静态链接和动态链接
+###  静态链接和动态链接
 
 在JVM中，将符号引用转换为调用方法的直接引用与方法的绑定机制相关。
 
@@ -238,7 +192,7 @@ public void test() {
 - **动态链接**：**被调用的方法在编译期间无法被确定下来**，只能在程序运行期将调用方法的符号引用
   转换为直接引用，由于这种引用转换过程具备动态性，因此被称为动态链接。
 
-#### 早期绑定和晚期绑定
+### 早期绑定和晚期绑定
 
 对应的方法的绑定机制为：早期绑定和晚期绑定。绑定是一个字段、方法或类在符号引用被替换为直接引用的过程，这仅仅发生一次。
 
@@ -303,7 +257,7 @@ public class AnimalTest {
 }
 ```
 
-#### 虚方法和非虚方法
+### 虚方法和非虚方法
 
 - 如果方法在编译器就确定了具体的调用版本，这个版本在运行时是不可变的。称为**非虚方法**。
 - 静态方法、私有方法、`final`方法、实例构造器、父类方法都是非虚方法。
@@ -434,7 +388,7 @@ interface MethodInterface{
 40 return
 ```
 
-#### 虚方法表
+### 虚方法表
 
 如果在每次动态分派的过程中都要重新在类的方法元数据中搜索合适的目标的话就可能影响到执行效率。为了提高性能，JVM采用在类的方法区建立一个**虚方法表（非虚方法不会出现在表中）来实现。使用索引表来代替查找。**
 
@@ -442,7 +396,7 @@ interface MethodInterface{
 
 ![虚方法表](../images/虚方法表.png)
 
-### 方法返回地址
+## 方法返回地址
 
 - 存放调用该方法的PC寄存器的值。
 - 一个方法的结束，有两种方式：
@@ -465,7 +419,7 @@ interface MethodInterface{
 
 **正常完成出口和异常完成出口的区别在于：通过异常完成出口退出的不会给它的上层调用者产生任何的返回值。**
 
-### 附加信息
+## 附加信息
 
 ## 本地方法栈
 
@@ -905,6 +859,8 @@ public class ScalarReplace {
 - 目前很多书籍还是基于JDK 7以前的版本，JDK已经发生了很多变化，intern字符串的缓存和静态变量曾经都分配在永久代上，而永久代已经被元空间取代。但是intern字符串缓存和静态变量并不是被转移到元数据区，而是直接在堆上分配，所以这一点同样符合前面一点的结论：对象实例都是分配在堆上。
 
 ## 方法区
+
+![image-20211228143235910](images/image-20211228143235910.png)
 
 ### 栈、堆、方法区的交互关系
 
