--- a/jvm/docs/内存与垃圾回收/14_垃圾回收相关算法.md
+++ b/jvm/docs/内存与垃圾回收/14_垃圾回收相关算法.md
@@ -8,7 +8,7 @@
 
 - 那么在JVM中究竟是如何标记一个死亡对象呢？简单来说，当一个对象已经不再被任何的存活对象继续引用时，就可以宣判为已经死亡。
 
-- 判断对象存活一般有两种方式：==引用计数算法和可达性分析算法==。
+- 判断对象存活一般有两种方式：**引用计数算法和可达性分析算法**。
 
 ***
 
@@ -93,7 +93,7 @@
 2. 进行筛选，判断此对象是否有必要执行`finalize()`方法
    -  如果对象没有重写`finalize()`方法，或者`finalize()`方法已经被虚拟机调用过，则虚拟机视为“没有必要执行”，被判定为不可触及的。
    - 如果对象重写了`finalize()`方法，且还没有执行过，那么对象会被插入到F-Queue队列中，由一个虚拟机自动创建的、低优先级的Finalizer线程触发其`finalize()`方法执行。
-   -  ==`finalize()`方法是对象逃脱死亡的最后机会==，稍候GC会对F-Queue队列中的对象进行第二次标记。如果对象在`finalize()`方法中与引用链上的任何一个对象建立了联系，那么在第二次标记时，对象会被移除“即将回收”集合。之后，对象会再次出现没有引用存在的情况。在这个情况下，`finalize()`方法不会被再次调用，对象会直接变成不可触及的状态。对象的`finalize()`方法只会被调用一次。
+   -  **`finalize()`方法是对象逃脱死亡的最后机会**，稍候GC会对F-Queue队列中的对象进行第二次标记。如果对象在`finalize()`方法中与引用链上的任何一个对象建立了联系，那么在第二次标记时，对象会被移除“即将回收”集合。之后，对象会再次出现没有引用存在的情况。在这个情况下，`finalize()`方法不会被再次调用，对象会直接变成不可触及的状态。对象的`finalize()`方法只会被调用一次。
 
 ```java
 /**
@@ -177,7 +177,7 @@ public class HeapOOM {
 
 当堆中的有效内存空间被耗尽的时候，就会停止整个程序（stop the world），然后进行两项工作，第一项是标记、第二项则是清除。
 
-- 标记：Collector从引用根节点开始遍历，==标记所有被引用的对象==。一般是在对象的Header中记录为==可达对象==。
+- 标记：Collector从引用根节点开始遍历，**标记所有被引用的对象**。一般是在对象的Header中记录为**可达对象**。
 - 清除：Collector对堆内存从头到尾进行线性的遍历，如果发现某个对象在其Header中没有标记为可达对象，则将其回收。
 
 ![标记清除图解](../images/标记清除图解.png)
@@ -224,9 +224,9 @@ public class HeapOOM {
 
 ![标记压缩算法](../images/标记压缩算法.png)
 
-标记-压缩算法的最终效果等同于标记-清除算法执行完成后，再进行一次内存碎片整理，因此，也可以把它称为==标记-清除-压缩（Mark-Sweep-Compact）算法==。
+标记-压缩算法的最终效果等同于标记-清除算法执行完成后，再进行一次内存碎片整理，因此，也可以把它称为**标记-清除-压缩（Mark-Sweep-Compact）算法**。
 
-二者的本质差异在于==标记-清除算法是一种非移动式的回收算法==，==标记-压缩是移动式的==。是否移动回收后的存活对象是一项优缺点并存的风险决策。
+二者的本质差异在于**标记-清除算法是一种非移动式的回收算法，标记-压缩是移动式的**。是否移动回收后的存活对象是一项优缺点并存的风险决策。
 
 可以看到，标记的存活对象将会被整理，按照内存地址依次排列，而未被标记的内存会被清理掉。如此一来，当我们需要给新对象分配内存时，JVM只需要持有一个内存的起始地址即可，这比维护一个空闲列表显然少了许多开销。
 
@@ -255,7 +255,7 @@ public class HeapOOM {
 
 ## 分代收集算法
 
-分代收集算法基于这样一个事实：不同的对象的生命周期是不一样的。==因此不同生命周期的对象可以采取不同的收集方式，以便提高回收效率==。
+分代收集算法基于这样一个事实：不同的对象的生命周期是不一样的。**因此不同生命周期的对象可以采取不同的收集方式，以便提高回收效率**。
 
 几乎所有的GC都是采用分代收集算法执行垃圾回收的。
 
