JVM监控及诊断工具-命令行

--- a/jvm/docs/性能监控和调优/01_概述.md
+++ b/jvm/docs/性能监控和调优/01_概述.md
@@ -76,11 +76,11 @@
 
 ### 第二步（排查问题）：性能分析
 
-一种以侵入方式收集运行性能数据的活动，它会影响应用的吞吐量或响应性。
+一种以**侵入方式**收集运行性能数据的活动，它会影响应用的吞吐量或响应性。
 
 性能分析是针对性能问题的答复结果，关注的范围通常比性能监控更加集中。
 
-性能分析很少在生产环境下进行，通常是在质量评估、系统测试或者开发环境下进行，是性能监控之后的步骤。
+性能分析很少在生产环境下进行，通常是在质量评估、**系统测试或者开发环境下进行**，是性能监控之后的步骤。
 
 ---
 
@@ -105,7 +105,7 @@
 
 ## 性能评价/测试指标
 
-1. 停顿时间（或响应时间）
+1. **停顿时间（或响应时间）**
 
    提交请求和返回该请求的响应之间使用的时间，一般比较关注平均响应时间常用操作的响应时间列表：
 
@@ -123,11 +123,12 @@
 
    在垃圾回收环节中：
 
-   暂停时间：执行垃圾收集时，程序的工作线程被暂停的时间。
+   暂停时间：**执行垃圾收集时，程序的工作线程被暂停的时间。**
 
-2. 吞吐量
+2. **吞吐量**
+   
    - 对单位时间内完成的工作量（请求）的量度
-   - 在GC中：运行用户代码的时间占总运行时间的比例（总运行时间：程序的运行的时间+内存回收的时间）。吞吐量为1-1/（1+n）。-XX:GCTimeRatio=n。（n为程序的运行的时间/内存回收的时间）
+   - 在GC中：运行用户代码的时间占总运行时间的比例（总运行时间：程序的运行的时间+内存回收的时间）。**吞吐量为1-1/（1+n）。-XX:GCTimeRatio=n。**（n为程序的运行的时间/内存回收的时间）
    
 3. 并发数
 
