--- a/jvm/docs/性能监控和调优/05_分析GC日志.md
+++ b/jvm/docs/性能监控和调优/05_分析GC日志.md
@@ -163,7 +163,9 @@ GC日志中有三个时间：user，sys和real
 
 GCeasy——一款超好用的在线分析GC日志的网站
 
-官网地址：https://gceasy.io/，GCeasy是一款在线的GC日志分析器，可以通过GC日志分析进行内存泄漏检测、GC暂停原因分析、JVM配置建议优化等功能，而且是可以免费使用的（有一些服务是收费的）。
+官网地址：https://gceasy.io/
+
+GCeasy是一款在线的GC日志分析器，可以通过GC日志分析进行内存泄漏检测、GC暂停原因分析、JVM配置建议优化等功能，而且是可以免费使用的（有一些服务是收费的）。
 
 
 
@@ -172,7 +174,9 @@ GCeasy——一款超好用的在线分析GC日志的网站
 ### GCViewer
 
 1.下载GCViewer工具
-源码下载：https://github.com/chewiebug/GCViewer运行版本下载：https://github.com/chewiebug/GCViewer/wiki/Changelog
+源码下载：https://github.com/chewiebug/GCViewer
+
+运行版本下载：https://github.com/chewiebug/GCViewer/wiki/Changelog
 
 2.只需双击gcviewer-1.3x.jar或运行java-jar gcviewer-1.3x.jar（它需要运行java1.8vm），即可启动GCViewer（gui）
 
