--- a/mysql/高级篇/第04章_逻辑架构.md
+++ b/mysql/高级篇/第04章_逻辑架构.md
@@ -4,13 +4,17 @@
 
 ### 1. 1 服务器处理客户端请求
 
+首先MySQL是典型的C/S架构，即`Client/Server架构`，服务器端程序使用的`mysqld`。
+
+不论客户端进程和服务器进程是采用哪种方式进行通信，最后实现的效果都是：**客户端进程向服务器进程发送一段文本（SQL语句），服务器进程处理后再向客户端进程发送一段文本（处理结果）**。
+
 那服务器进程对客户端进程发送的请求做了什么处理，才能产生最后的处理结果呢？这里以查询请求为例展示：
 
 ![image-20220207202230222](images/image-20220207202230222.png)
 
 下面具体展开看一下：
 
-![image-20220207202246005](images/image-20220207202246005.png)
+![MySQL服务器端的逻辑架构说明](images/MySQL服务器端的逻辑架构说明.png)
 
 
 ### 1.2 Connectors
@@ -24,35 +28,53 @@
 - **用户名或密码不对，会收到一个Access denied for user错误，客户端程序结束执行**
 - **用户名密码认证通过，会从权限表查出账号拥有的权限与连接关联，之后的权限判断逻辑，都将依赖于此时读到的权限**
 
+一个系统只会和MySQL服务器建立一个连接吗？只能有一个系统和MySQL服务器建立连接吗？
+
+当然不是，多个系统都可以和MySQL服务器建立连接，每个系统建立的连接肯定不止一个。所以，为了解决TCP无限创建与TCP频繁创建销毁带来的资源耗尽、性能下降问题。MySQL服务器里有专门的`TCP连接池`限制连接数，采用`长连接模式`复用TCP连接，来解决上述问题。
+
+ ![image-20220212150133545](images/image-20220212150133545.png)
+
 `TCP`连接收到请求后，必须要分配给一个线程专门与这个客户端的交互。所以还会有个线程池，去走后面的流程。每一个连接从线程池中获取线程，省去了创建和销毁线程的开销。
+
+这些内容我们都归纳到`MySQL`的**连接管理**组件中。
+
+所以**连接管理**的职责是负责认证、管理连接、获取权限信息。
 
 ### 1.4 第 2 层：服务层
 
-- SQL Interface: SQL接口
+第二层架构主要完成大多数的核心服务功能，如SQL接口，并完成`缓存的查询`，SQL的分析和优化及部分内置函数的执行。所有跨存储引擎的功能也在这一层实现，如过程、函数等。
 
-  - 接收用户的SQL命令，并且返回用户需要查询的结果。比如SELECT ... FROM就是调用SQL
-    Interface
+在该层，服务器会`解析查询`并创建相应的内部`解析树`，并对其完成相应的`优化`：如确定查询表的顺序，是否利用索引等，最后生成相应的执行操作。
+
+如果是SELECT语句，服务器还会`查询内部的缓存`。如果缓存空间足够大，这样在解决大量读操作的环境中能够很好的提升系统的性能。
+
+- **SQL Interface: SQL接口**
+
+  - 接收用户的SQL命令，并且返回用户需要查询的结果。比如SELECT ... FROM就是调用SQL Interface
   - MySQL支持DML（数据操作语言）、DDL（数据定义语言）、存储过程、视图、触发器、自定义函数等多种SQL语言接口
-
-- Parser: 解析器
+  
+- **Parser: 解析器**
 
   - 在解析器中对 SQL 语句进行语法分析、语义分析。将SQL语句分解成数据结构，并将这个结构传递到后续步骤，以后SQL语句的传递和处理就是基于这个结构的。如果在分解构成中遇到错误，那么就说明这个SQL语句是不合理的。
-  - 在SQL命令传递到解析器的时候会被解析器验证和解析，并为其创建语法树，并根据数据字典丰富查询语法树，会验证该客户端是否具有执行该查询的权限。创建好语法树后，MySQL还会对SQl查询进行语法上的优化，进行查询重写。
+  - 在SQL命令传递到解析器的时候会被解析器验证和解析，并为其创建`语法树`，并根据数据字典丰富查询语法树，会`验证该客户端是否具有执行该查询的权限`。创建好语法树后，MySQL还会对SQl查询进行语法上的优化，进行查询重写。
 
-- Optimizer: 查询优化器
-  - SQL语句在语法解析之后、查询之前会使用查询优化器确定 SQL 语句的执行路径，生成一个执行计划。
-
-  - 这个执行计划表明应该使用哪些索引进行查询（全表检索还是使用索引检索），表之间的连接顺序如何，最后会按照执行计划中的步骤调用存储引擎提供的方法来真正的执行查询，并将查询结果返回给用户。
-
-  - 它使用“选取-投影-连接”策略进行查询。例如：
-
+- **Optimizer: 查询优化器**
+  
+- SQL语句在语法解析之后、查询之前会使用查询优化器确定 SQL 语句的执行路径，生成一个`执行计划`。
+  
+- 这个执行计划表明应该`使用哪些索引`进行查询（全表检索还是使用索引检索），表之间的连接顺序如何，最后会按照执行计划中的步骤调用存储引擎提供的方法来真正的执行查询，并将查询结果返回给用户。
+  
+- 它使用“`选取-投影-连接`”策略进行查询。例如：
+  
     ```mysql
     SELECT id,name FROM student WHERE gender = '女';
-    ```
-
-    这个SELECT查询先根据WHERE语句进行`选取`，而不是将表全部查询出来以后再进行gender过滤。 这个SELECT查询先根据id和name进行属性`投影`，而不是将属性全部取出以后再进行过滤，将这两个查询条件`连接`起来生成最终查询结果。
-
-- Caches & Buffers： 查询缓存组件
+  ```
+  
+  这个SELECT查询先根据WHERE语句进行`选取`，而不是将表全部查询出来以后再进行gender过滤。 
+    
+    这个SELECT查询先根据id和name进行属性`投影`，而不是将属性全部取出以后再进行过滤，将这两个查询条件`连接`起来生成最终查询结果。
+  
+- **Caches & Buffers： 查询缓存组件**
 
   - MySQL内部维持着一些Cache和Buffer，比如Query Cache用来缓存一条SELECT语句的执行结果，如果能够在其中找到对应的查询结果，那么就不必再进行查询解析、优化和执行的整个过程了，直接将结果反馈给客户端。
   - 这个缓存机制是由一系列小缓存组成的。比如表缓存，记录缓存，key缓存，权限缓存等 。
@@ -63,6 +85,10 @@
   > 如果我问你9+8×16-3×2×17的值是多少，你可能会用计算器去算一下，最终结果 35 。如果再问你一遍9+8×16-3×2×17的值是多少，你还用再傻呵呵的再算一遍吗？我们刚刚已经算过了，直接说答案就好了。
 
 ### 1. 5 第 3 层：引擎层
+
+和其它数据库相比，MySQL有点与众不同，它的架构可以在多种不同场景中应用并发挥良好作用，主要体现在存储引擎的架构上，`插件式的存储引擎`架构将查询处理和其它的系统任务以及数据的存储提取相分离。这种架构可以根据业务的需求和实际需要选择合适的存储引擎。同时开源的MySQL还允许开发人员设置自己的存储引擎。
+
+这种高效的模块化架构为那些希望专门针对特定应用程序需求（例如数据仓库、事务处理或高可用性情况）的人提供了巨大的好处，同时享受使用一组独立于任何接口和服务的优势存储引擎。|
 
 插件式存储引擎层（ Storage Engines）， **真正的负责了MySQL中数据的存储和提取，对物理服务器级别维护的底层数据执行操作** ，服务器通过API与存储引擎进行通信。不同的存储引擎具有的功能不同，这样我们可以根据自己的实际需要进行选取。
 
@@ -121,7 +147,7 @@ SELECT employee_id,last_name FROM employees WHERE employee_id = 101;
 接着，要做“`语法分析`”。根据词法分析的结果，语法分析器（比如：Bison）会根据语法规则，判断你输入的这个 SQL 语句是否`满足 MySQL 语法`。
 
 ```mysql
-select department_id,job_id,avg(salary) from employees group by department_id;
+select department_id,job_id,avg(salary) from employees group by department_id;# 错误
 ```
 
 如果SQL语句正确，则会生成一个这样的语法树：
@@ -129,6 +155,8 @@ select department_id,job_id,avg(salary) from employees group by department_id;
 ![image-20220207211211027](images/image-20220207211211027.png)
 
 **3. 优化器** ：在优化器中会确定 SQL 语句的执行路径，比如是根据全表检索，还是根据索引检索等。
+
+经过了解析器，MySQL就知道你要做什么了。在开始执行之前，还要先经过优化器的处理。**一条查询可以有很多种执行方式，最后都返回相同的结果。优化器的作用就是找到这其中最好的执行计划**。
 
 举例：如下语句是执行两个表的 join：
 
@@ -148,7 +176,9 @@ where test1.name='zhangwei' and test2.name='mysql高级课程';
 
 在查询优化器中，可以分为`逻辑查询`优化阶段和`物理查询`优化阶段。
 
-##### 4. 执行器 ：
+
+
+**4. 执行器 ：**
 
 截止到现在，还没有真正去读写真实的表，仅仅只是产出了一个执行计划。于是就进入了`执行器阶段`。
 
@@ -171,13 +201,15 @@ select * from test where id= 1;
 
 至此，这个语句就执行完成了。对于有索引的表，执行的逻辑也差不多。
 
-SQL 语句在 MySQL 中的流程是：SQL语句→查询缓存→解析器→优化器→执行器。
+SQL 语句在 MySQL 中的流程是：`SQL语句→查询缓存→解析器→优化器→执行器`。
 
 ![image-20220207211621894](images/image-20220207211621894.png)
 
 ### 2. 2 MySQL 8 中SQL执行原理
 
 #### 1. 确认profiling 是否开启
+
+了解查询语句底层执行的过程：`select @@profiling；`或者`show variables like %profiling%'`查看是否开启计划。开启它可以让MySQL 收集在SQL执行时所使用的资源情况，命令如下：
 
 ```mysql
 mysql> select @@profiling;
@@ -287,7 +319,7 @@ mysql> select * from locations;
 
 #### 6. 查看profile
 
-##### 显示执行计划，查看程序的执行步骤：
+显示执行计划，查看程序的执行步骤：
 
 ```mysql
 mysql> show profile for query 1 ;
@@ -397,6 +429,8 @@ Oracle 和 MySQL 在进行 SQL 的查询上面有软件实现层面的差异。O
 
 **缓存池的重要性：**
 
+对于使用`InnoDB`作为存储引擎的表来说，不管是用于存储用户数据的索引（包括聚簇索引和二级索引），还是各种系统数据，都是以`页`的形式存放在`表空间`中的，而所谓的表空间只不过是InnoDB对文件系统上一个或几个实际文件的抽象，也就是说我们的数据说到底还是存储在磁盘上的。但是各位也都知道，磁盘的速度慢的跟乌龟一样，怎么能配得上“快如风，疾如电”的CPU呢？这里，缓冲池可以帮助我们消除CPU和磁盘之间的鸿沟。所以InnoDB存储引擎在处理客户端的请求时，当需要访问某个页的数据时，就会把`完整的页的数据全部加载到内存`中，也就是说即使我们只需要访问一个页的一条记录，那也需要先把整个页的数据加载到内存中。将整个页加载到内存中后就可以进行读写访问了，在进行完读写访问之后并不着急把该页对应的内存空间释放掉，而是将其`缓存`起来，这样将来有请求再次访问该页面时，就可以`省去磁盘IO`的开销了。
+
 **缓存原则：**
 
 “`位置 * 频次`”这个原则，可以帮我们对 I/O 访问效率进行优化。
@@ -406,6 +440,10 @@ Oracle 和 MySQL 在进行 SQL 的查询上面有软件实现层面的差异。O
 其次，频次决定优先级顺序。因为缓冲池的大小是有限的，比如磁盘有 200 G，但是内存只有 16 G，缓冲池大小只有 1 G，就无法将所有数据都加载到缓冲池里，这时就涉及到优先级顺序，会`优先对使用频次高的热数据进行加载`。
 
 **缓冲池的预读特性：**
+
+了解了缓冲池的作用之后，我们还需要了解缓冲池的另一个特性：`预读`。
+
+缓冲池的作用就是提升I/0效率，而我们进行读取数据的时候存在一个“局部性原理”，也就是说我们使用了一些数据，`大概率还会使用它周围的一些数据`，因此采用“预读”的机制提前加载，可以减少未来可能的磁盘I/0操作。
 
 
 #### 2. 查询缓存
@@ -423,6 +461,10 @@ Oracle 和 MySQL 在进行 SQL 的查询上面有软件实现层面的差异。O
 ![image-20220207212947570](images/image-20220207212947570.png)
 
 **如果我们执行 SQL 语句的时候更新了缓存池中的数据，那么这些数据会马上同步到磁盘上吗？**
+
+实际上，当我们对数据库中的记录进行修改的时候，首先会修改缓冲池中页里面的记录信息，然后数据库会`以一定的频率刷新`到磁盘上。注意并不是每次发生更新操作，都会立刻进行磁盘回写。缓冲池会采用一种叫做`checkpoint的机制`将数据回写到磁盘上，这样做的好处就是提升了数据库的整体性能。
+
+比如，当`缓冲池不够用`时，需要释放掉一些不常用的页，此时就可以强行采用checkpoint的方式，将不常用的脏页回写到磁盘上，然后再从缓冲池中将这些页释放掉。这里脏页（dirty page）指的是缓冲池中被修改过的页，与磁盘上的数据页不一致。
 
 ### 3. 3 查看/设置缓冲池的大小
 
@@ -457,6 +499,10 @@ innodb_buffer_pool_size = 268435456
 
 ### 3.4 多个Buffer Pool实例
 
+Buffer Pool本质是InnoDB向操作系统申请的一块`连续的内存空间`，在多线程环境下，访问Buffer Pool中的数据都需要`加锁`处理。在Buffer Pool特别大而且多线程并发访问特别高的情况下，单一的Buffer Pool可能会影响请求的处理速度。所以在Buffer Pool特别大的时候，我们可以把它们`拆分成若干个小的Buffer Pool`，每个Buffer Pool都称为一个实例，它们都是独立的，独立的去申请内存空间，独立的管理各种链表。所以在多线程并发访问时并不会相互影响，从而提高并发处理能力。
+
+我们可以在服务器启动的时候通过设置`innodb_buffer_pool_instances`的值来修改Buffer Pool实例的个数，比方说这样：
+
 ```properties
 [server]
 innodb_buffer_pool_instances = 2
@@ -480,14 +526,20 @@ innodb_buffer_pool_size/innodb_buffer_pool_instances
 
 也就是总共的大小除以实例的个数，结果就是每个`Buffer Pool`实例占用的大小。
 
+不过也不是说Buffer Pool实例创建的越多越好，分别`管理各个BufferPoo1也是需要性能开销的`，lnnoDB规定：当innodb_buffer_pool_size的值小于1G的时候设置多个实例是无效的，InnoDB会默认把`innodb_buffer_pool_instances`的值修改为1。而我们鼓励在Buffer Pool大于或等于1G的时候设置多个Buffer Pool实例。
+
 ### 3.5 引申问题
 
 Buffer Pool是MySQL内存结构中十分核心的一个组成，你可以先把它想象成一个黑盒子。
 
 **黑盒下的更新数据流程**
 
+当我们查询数据的时候，会先去Buffer Pool中查询。如果Buffer Pool中不存在，存储引擎会先将数据从磁盘加载到Buffer Pool中，然后将数据返回给客户端；同理，当我们更新某个数据的时候，如果这个数据不存在于Buffer Pool，同样会先数据加载进来，然后修改修改内存的数据。被修改过的数据会在之后统一刷入磁盘。
+
 ![image-20220207213241200](images/image-20220207213241200.png)
 
-我更新到一半突然发生错误了，想要回滚到更新之前的版本，该怎么办？连数据持久化的保证、事务回滚都做不到还谈什么崩溃恢复？
+这个过程看似没啥问题，实则是有问题的。假设我们修改Buffer Pool中的数据成功，但是还没来得及将数据刷入磁盘MySQL就挂了怎么办？按照上图的逻辑，此时更新之后的数据只存在于Buffer Pool中，如果此时MySQL宕机了，这部分数据将会永久地丢失；
+
+再者，我更新到一半突然发生错误了，想要回滚到更新之前的版本，该怎么办？连数据持久化的保证、事务回滚都做不到还谈什么崩溃恢复？
 
 答案： **Redo Log & Undo Log**
