--- a/mysql/高级篇/第08章_索引的创建与设计原则.md
+++ b/mysql/高级篇/第08章_索引的创建与设计原则.md
@@ -13,19 +13,47 @@ MySQL的索引包括普通索引、唯一性索引、全文索引、单列索引
 
 - 按照`作用字段个数`进行划分，分成单列索引和联合索引。
 
-1. **普通索引**
+**1.普通索引**
 
-2. **唯一性索引**
+在创建普通索引时，不附加任何限制条件，只是用于提高查询效率。这类索引可以创建在`任何数据类型`中，其值是否唯一和非空，要由字段本身的完整性约束条件决定。建立索引以后，可以通过索引进行查询。例如，在表`student`的字段`name`上建立一个普通索引，查询记录时就可以根据该索引进行查询。
 
-3. **主键索引**
+**2.唯一性索引**
 
-4. **单列索引**
+使用`UNIQUE参数`可以设置索引为唯一性索引，在创建唯一性索引时，限制该索引的值必须是唯一的，但允许有空值。在一张数据表里`可以有多个`唯一索引。
 
-5. **多列(组合、联合)索引**
+例如，在表`student`的字段`emai1`中创建唯一性索引，那么字段emai的值就必须是唯一的。通过唯一性索引，可以更快速地确定某条记录。
 
-6. **全文索引**
+**3.主键索引**
 
-7. **补充：空间索引**
+主键索引就是一种`特殊的唯一性索引`，在唯一索引的基础上增加了不为空的约束，也就是NOT NULL+UNIQUE，一张表里`最多只有一个`主键索引。
+
+`Why？`这是由主键索引的物理实现方式决定的，因为数据存储在文件中只能按照一种顺序进行存储。
+
+**4.单列索引**
+
+在表中的单个字段上创建索引。单列索引更根据该字段进行索引。单列索引可以是普通索引，也可以是唯一性索引，还可以是全文索引。只要保证该索引只对应一个字段即可。一个表可以`有多个`单列索引。
+
+**5.多列(组合、联合)索引**
+
+多列索引是在表的`多个字段组合`上创建一个索引。该索引指向创建时对应的多个字段，可以通过这几个字段进行查询，但是只有查询条件中使用了这些字段中的第一个字段时才会被使用。例如，在表中的字段id、name和gender上建立一个多列索引`idx_id_name_gender`，只有在查询条件中使用了字段id时该索引才会被使用。使用组合索引时遵循`最左前缀集合`。
+
+**6.全文索引**
+
+全文索引（也称全文检索）是目前`搜索引擎`使用的一种关键技术。它能够利用【`分词技术`】等多种算法智能分析出文本文字中关键词的频率和重要性，然后按照一定的算法规则智能地筛选出我们想要的搜索结果。全文索引非常适合大型数据集，对于小的数据集，它的用处比较小。
+
+使用参数`FULLTEXT`可以设置索引为全文索引。在定义索引的列上支持值的全文查找，允许在这些索引列中插入重复值和空值。全文索引只能创建在`CHAR`、`VARCHAR`或`TEXT`类型及其系列类型的字段上，**查询数据量较大的字符串类型的字段时，使用全文索引可以提高查询速度**。例如，表`student`的字段`information`是`TEXT`类型，该字段包含了很多文字信息。在字段information上建立全文索引后，可以提高查询字段information的速度。
+
+全文索引典型的有两种类型：自然语言的全文索引和布尔全文索引。
+
+- 自然语言搜索擎将计算每一个文档对象和查询的相关度。这里，相关度是基于匹配的关键词的个数，以及关键词在文档中出现的次数。**在整个索引中出现次数越少的词语，匹配时的相关度就越高**。相反，非常常见的单词将不会被搜索，如果一个词语的在超过50%的记录中都出现了，那么自然语言的搜索将不会搜索这类词语。
+
+MySQL数据库从3.23.23版开始支持全文索引，但MySQL5，p.4以前`只有Myisam支持`，5.6.4版本以后`innodb才支持`，但是官方版本不支持`中文分词`，需要第三方分词插件。在5.7.6版本，MySQL内置了`ngram全文解析器`，用来支持亚洲语种的分词。测试或使用全文索引时，要先看一下自己的MySQL版本、存储引擎和数据类型是否支持全文索引。
+
+随着大数据时代的到来，关系型数据库应对全文索引的需求已力不从心，逐渐被`solr`、`ElasticSearch`等专门的搜索引擎所替代。
+
+**7.补充：空间索引**
+
+使用`参数SPATIAL`可以设置索引为`空间索引`。空间索引只能建立在空间数据类型上，这样可以提高系统获取空间数据的效率。MySQL中的空间数据类型包括`GEOMETRY`、`POINT`、`LINESTRING`和`POLYGON`等。目前只有MyISAM存储引擎支持空间检索，而且索引的字段不能为空值。对于初学者来说，这类索引很少会用到。
 
 **小结：不同的存储引擎支持的索引类型也不一样 **
 
@@ -41,7 +69,11 @@ MySQL的索引包括普通索引、唯一性索引、全文索引、单列索引
 
 ### 1. 2 创建索引
 
+MySQL支持多种方法在单个或多个列上创建索引：在创建表的定义语句 `CREATE TABLE`中指定索引列，使用`ALTER TABLE`语句在存在的表上创建索引，或者使用`CREATE INDEX`语句在已存在的表上添加索引。
+
 #### 1. 创建表的时候创建索引
+
+使用CREATETABLE创建表时，除了可以定义列的数据类型外，还可以定义主键约束、外键约束或者唯一性约束，而不论创建哪种约束，在定义约束的同时相当于在指定列上创建了一个索引。
 
 举例：
 
@@ -62,8 +94,7 @@ CREATE TABLE emp(
 
 ```mysql
 CREATE TABLE table_name [col_name data_type]
-[UNIQUE | FULLTEXT | SPATIAL] [INDEX | KEY] [index_name] (col_name [length]) [ASC |
-DESC]
+[UNIQUE | FULLTEXT | SPATIAL] [INDEX | KEY] [index_name] (col_name [length]) [ASC | DESC]
 ```
 
 - `UNIQUE`、`FULLTEXT`和`SPATIAL`为可选参数，分别表示唯一索引、全文索引和空间索引；
@@ -282,9 +313,13 @@ DROP INDEX index_name ON table_name;
 
 >  提示 删除表中的列时，如果要删除的列为索引的组成部分，则该列也会从索引中删除。如果组成索引的所有列都被删除，则整个索引将被删除。
 
-## 2. MySQL 8. 0 索引新特性
+## 2. MySQL 8.0 索引新特性
 
 ### 2. 1 支持降序索引
+
+降序索引以降序存储键值。虽然在语法上，从MySQL4版本开始就已经支持降序索引的语法了，但实际上该DESC定义是被忽略的，直到MySQL 8.x版本才开始真正支持降序索引（仅限于InnoDB存储引擎）。
+
+MySQL在**8.0版本之前创建的仍然是升序索引，使用时进行反向扫描，这大大降低了数据库的效率**。在某些场景下，降序索引意义重大。例如，如果一个查询，需要对多个列进行排序，且顺序要求不一致，那么使用降序索引将会避免数据库使用额外的文件排序操作，从而提高性能。
 
 举例：分别在MySQL 5. 7 版本和MySQL 8. 0 版本中创建数据表ts1 ，结果如下：
 
@@ -355,7 +390,16 @@ EXPLAIN SELECT * FROM ts1 ORDER BY a DESC,b DESC LIMIT 5 ;
 
 从MySQL 8.x开始支持`隐藏索引（invisible indexes）`，只需要将待删除的索引设置为隐藏索引，使查询优化器不再使用这个索引（即使使用force index（强制使用索引），优化器也不会使用该索引），确认将索引设置为隐藏索引后系统不受任何响应，就可以彻底删除索引。`这种通过先将索引设置为隐藏索引，再删除索引的方式就是软删除`。
 
-**1. 创建表时直接创建** 在MySQL中创建隐藏索引通过SQL语句INVISIBLE来实现，其语法形式如下：
+同时，如果你想验证某个索引删除之后的`查询性能影响`，就可以暂时先隐藏该索引。
+
+> 注意：
+> 主键不能被设置为隐藏索引。当表中没有显式主键时，表中第一个唯一非空索引会成为隐式主键，也不能设置为隐藏索引。
+
+索引默认是可见的，在使用CREATE TABLE，CREATE INDEX或者ALTER TABLE等语句时可以通过`VISIBLE`或者`INVISIBLE`关键词设置索引的可见性。
+
+**1. 创建表时直接创建** 
+
+在MySQL中创建隐藏索引通过SQL语句INVISIBLE来实现，其语法形式如下：
 
 ```mysql
 CREATE TABLE tablename(
@@ -472,6 +516,8 @@ mysql> select @@optimizer_switch \G
 此时，use_invisible_indexes属性的值已经被设置为“off”。
 
 ## 3. 索引的设计原则
+
+为了使索引的使用效率更高，在创建索引时，必须考虑在哪些字段上创建索引和创建什么类型的索引。**索引设计不合理或者缺少索引都会对数据库和应用程序的性能造成障碍**。高效的索引对于获得良好的性能非常重要。设计索引时，应该考虑相应准则。
 
 ### 3. 1 数据准备
 
@@ -618,9 +664,15 @@ CALL insert_stu( 1000000 );
 
 #### 1. 字段的数值有唯一性的限制
 
+索引本身可以起到约束的作用，比如唯一索引、主键索引都是可以起到唯一性约束的，因此在我们的数据表中，如果`某个字段是唯一性的`，就可以直接`创建唯一性索引`，或者`主键索引`。这样可以更快速地通过该索引来确定某条记录。
+
+例如，学生表中`学号`是具有唯一性的字段，为该字段建立唯一性索引可以很快确定某个学生的信息，如果使用`姓名`的话，可能存在同名现象，从而降低查询速度。
+
 > 业务上具有唯一特性的字段，即使是组合字段，也必须建成唯一索引。（来源：Alibaba）
 >
 > 说明：不要以为唯一索引影响了 insert 速度，这个速度损耗可以忽略，但提高查找速度是明显的。
+
+
 
 #### 2. 频繁作为 WHERE 查询条件的字段
 
@@ -628,13 +680,46 @@ CALL insert_stu( 1000000 );
 
 比如student_info数据表（含 100 万条数据），假设我们想要查询 student_id=123110 的用户信息。
 
+```mysql
+SELECT course_id,class_id,name,create_time,student_id 
+FROM student_info 
+WHERE student_id=123110;
+```
+
+
+
 #### 3. 经常 GROUP BY 和 ORDER BY 的列
 
 索引就是让数据按照某种顺序进行存储或检索，因此当我们使用 GROUP BY 对数据进行分组查询，或者使用 ORDER BY 对数据进行排序的时候，就需要`对分组或者排序的字段进行索引`。如果待排序的列有多个，那么可以在这些列上建立`组合索引`。
 
+比如，按照student_id 对学生选修的课程进行分组，显示不同的 student_id和课程数量，显示100个即可。
+
+如果我们不对student-id创建索引，执行下面的SQL 语句：
+
+```mysql
+SELECT student_id,count(*)as num FROM student_info group by student_id limit 100;
+```
+
+同样，如果是ORDER BY，也需要对字段创建索引。
+
+如果同时有GROUPBY和ORDERBY的情况：比如我们按照student_id进行分组，同时按照创建时间降序的方式进行排序，这时我们就需要同时进行GROUPBY和ORDER BY，那么是不是需要单独创建student_id的索引和create_time的索引呢？
+
+当我们对student_id和create_time`分别创建索引`，执行下面的SQL查询：
+
+```mysql
+SELECT student_id,count(*)as num FROM student_info 
+group by student_id 
+order by create_time desc 
+limit 100;
+```
+
+
+
 #### 4. UPDATE、DELETE 的 WHERE 条件列
 
 对数据按照某个条件进行查询后再进行 UPDATE 或 DELETE 的操作，如果对 WHERE 字段创建了索引，就能大幅提升效率。原理是因为我们需要先根据 WHERE 条件列检索出来这条记录，然后再对它进行更新或删除。 **如果进行更新的时候，更新的字段是非索引字段，提升的效率会更明显，这是因为非索引字段更新不需要对索引进行维护**。
+
+
 
 #### 5 .DISTINCT 字段需要创建索引
 
@@ -660,6 +745,8 @@ SELECT DISTINCT(student_id) FROM `student_info`;
 
 你能看到 SQL 查询效率有了提升，同时显示出来的 student_id 还是按照`递增的顺序`进行展示的。这是因为索引会对数据按照某种顺序进行排序，所以在去重的时候也会快很多。
 
+
+
 #### 6. 多表 JOIN 连接操作时，创建索引注意事项
 
 首先，`连接表的数量尽量不要超过 3 张`，因为每增加一张表就相当于增加了一次嵌套的循环，数量级增长会非常快，严重影响查询的效率。
@@ -681,9 +768,29 @@ WHERE name = '462eed7ac6e791292a79';
 
 这里我们对 name 创建索引，再执行上面的 SQL 语句，运行时间为 `0.002s`。
 
+
+
 #### 7. 使用列的类型小的创建索引
 
+我们这里所说的`类型大小`指的就是该类型表示的数据范围的大小。
+
+我们在定义表结构的时候要显式的指定列的类型，以整数类型为例，有`TINVINT`、`MEDIUMINT`、`INT`、`BIGINT`等，它们占用的存储空间依次递增，能表示的整数范围当然也是依次递增。如果我们想要对某个整数列建立索引的话，在表示的整数范围允许的情况下，尽量让索引列使用较小的类型，比如我们能使用`INT`就不要使用`BIGINT`，能使用`MEDIUMINT`就不要使用`INT`。这是因为：
+
+- 数据类型越小，在查询时进行的比较操作越快
+- 数据类型越小，索引占用的存储空间就越少，在一个数据页内就可以`放下更多的记录`，从而减少磁盘`I/O`带来的性能损耗，也就意味着可以把更多的数据页缓存在内存中，从而加快读写效率。
+
+这个建议对于表的`主键来说更加适用`，因为不仅是聚簇索引中会存储主键值，其他所有的二级索引的节点处都会存储一份记录的主键值，如果主键使用更小的数据类型，也就意味节省更多的存储空间和更高效的I/O。
+
 #### 8. 使用字符串前缀创建索引
+
+假设我们的字符串很长，那存储一个字符串就需要占用很大的存储空间。在我们需要为这个字符串列建立索引时，那就意味着在对应的B+树中有这么两个问题：
+
+- B+树索引中的记录需要把该列的完整字符串存储起来，更费时。而且字符串越长，`在索引中占用的存储空间越大`
+- 如果B+树索引中索引列存储的字符串很长，那在做字符串`比较时会占用更多的时间`。
+
+我们可以通过截取字段的前面一部分内容建立索引，这个就叫前缀索引。这样在查找记录时虽然不能精确的定位到记录的位置，但是能定位到相应前缀所在的位置，然后根据前缀相同的记录的主键值回表查询完整的字符串值。既`节约空间`，又`减少了字符串的比较时间`，还大体能解决排序的问题。
+
+例如，TEXT和BLOG类型的字段，进行全文检索会很浪费时间，如果只检索字段前面的若干字符，这样可以提高检索速度。
 
 创建一张商户表，因为地址字段比较长，在地址字段上建立前缀索引
 
@@ -721,29 +828,67 @@ from shop;
 
 **引申另一个问题：索引列前缀对排序的影响**
 
+如果使用了索引列前缀，比方说前边只把address列的`前12个字符`放到了二级索引中，下边这个查询可能就有点儿尴尬了：
+
+```mysql
+SELECT * FROM shop ORDER BY address LIMIT 12;
+```
+
+因为二级索引中不包含完整的address列信息，所以无法对前12个字符相同，后边的字符不同的记录进行排序，也就是使用索引列前缀的方式`无法支持使用索引排序`，只能使用文件排序。
+
 **拓展：Alibaba《Java开发手册》**
 
 `【强制】`在 varchar 字段上建立索引时，必须指定索引长度，没必要对全字段建立索引，根据实际文本区分度决定索引长度。
 
 说明：索引的长度与区分度是一对矛盾体，一般对字符串类型数据，长度为 20 的索引，区分度会高达`90% 以上`，可以使用 count(distinct left(列名, 索引长度))/count(*)的区分度来确定。
 
+
+
 #### 9. 区分度高(散列性高)的列适合作为索引
+
+列的基数指的是某一列中不重复数据的个数，比方说某个列包含值`2，5，8，2，5，8，2，5，8`，虽然有9条记录，但该列的基数却是`3`。也就是说，**在记录行数一定的情况下，列的基数越大，该列中的值越分散；列的基数越小，该列中的值越集中**。这个列的基数指标非常重要，直接影响我们是否能有效的利用索引。最好为列的基数大的列建立索引，为基数太小列的建立索引效果可能不好。
+
+可以使用公式 `select count（distinct a）/count（*）from t1` 计算区分度，越接近1越好，一般超过`33%`就算是比较高效的索引了。
+
+拓展：联合索引把区分度高（散列性高）的列放在前面。
+
+
 
 #### 10. 使用最频繁的列放到联合索引的左侧
 
 这样也可以较少的建立一些索引。同时，由于"最左前缀原则"，可以增加联合索引的使用率。
 
+
+
 #### 11. 在多个字段都要创建索引的情况下，联合索引优于单值索引
+
+
 
 ### 3. 3 限制索引的数目
 
+在实际工作中，我们也需要注意平衡，索引的数目不是越多越好。我们需要限制每张表上的索引数量，建议单张表索引数量`不超过6个`。原因：
 
+①每个索引都需要占用`磁盘空间`，索引越多，需要的磁盘空间就越大。
+
+②索引会影响 `INSERT、DELETE、UPDATE等语句的性能`，因为表中的数据更改的同时，索引也会进行调整和更新，会造成负担。
+
+③优化器在选择如何优化查询时，会根据统一信息，对每一个可以用到的`索引来进行评估`，以生成出一个最好的执行计划，如果同时有很多个索引都可以用于查询，会增加MySQL优化器生成执行计划时间，降低查询性能。
 
 ### 3. 4 哪些情况不适合创建索引
 
 #### 1. 在where中使用不到的字段，不要设置索引
 
+WHERE条件（包括GROUPBY、ORDERBY）里用不到的字段不需要创建索引，索引的价值是快速定位，如果起不到定位的字段通常是不需要创建索引的。举个例子：
+
+```mysql
+SELECT course_id,student_id,create_time FROM student_info WHERE student_id=41251;
+```
+
+因为我们是按照student_id来进行检索的，所以不需要对其他字段创建索引，即使这些字段出现在SELECT字段
+
 #### 2. 数据量小的表最好不要使用索引
+
+如果表记录太少，比如少于1000个，那么是不需要创建索引的。表记录太少，是否创建索引`对查询效率的影响并不大`。甚至说，查询花费的时间可能比遍历索引的时间还要短，索引可能不会产生优化效果。
 
 举例：创建表 1 ：
 
@@ -832,6 +977,8 @@ mysql> select * from t_with_index where b = 9879 ;
 
 #### 3. 有大量重复数据的列上不要建立索引
 
+在条件表达式中经常用到的不同值较多的列上建立索引，但字段中如果有大量重复数据，也不用创建索引。比如在学生表的“`性别`”字段上只有“男”与“女”两个不同值，因此无须建立索引。如果建立索引，不但不会提高查询效率，反而会`严重降低数据更新速度`。
+
 举例 1 ：要在 100 万行数据中查找其中的 50 万行（比如性别为男的数据），一旦创建了索引，你需要先访问 50 万次索引，然后再访问 50 万次数据表，这样加起来的开销比不使用索引可能还要大。
 
 举例 2 ：假设有一个学生表，学生总数为 100 万人，男性只有 10 个人，也就是占总人口的 10 万分之 1 。学生表 student_gender 结构如下。其中数据表中的 student_gender 字段取值为 0 或 1 ， 0 代表女性， 1 代表男性。
@@ -861,15 +1008,23 @@ SELECT * FROM student_gender WHERE student_gender = 1
 
 #### 4. 避免对经常更新的表创建过多的索引
 
+第一层含义：频繁更新的字段不一定要创建索引。因为更新数据的时候，也需要更新索引，如果索引太多，在更新索引的时候也会造成负担，从而影响效率。
+
+第二层含义：避免对经常更新的表创建过多的索引，并且索引中的列尽可能少。此时，虽然提高了查询速度，同时却会降低更新表的速度。
+
 #### 5. 不建议用无序的值作为索引
 
 例如身份证、UUID(在索引比较时需要转为ASCII，并且插入时可能造成页分裂)、MD5、HASH、无序长字符串等。
 
 #### 6. 删除不再使用或者很少使用的索引
 
+表中的数据被大量更新，或者数据的使用方式被改变后，原有的一些索引可能不再需要。数据库管理员应当定期找出这些索引，将它们删除，从而减少索引对更新操作的影响。
+
 #### 7. 不要定义冗余或重复的索引
 
 **① 冗余索引**
+
+有时候有意或者无意的就对同一个列创建了多个索引，比如：index（a，b，c）相当于index（a）、index（a，b）、index（a，b，c）。
 
 举例：建表语句如下
 
@@ -902,3 +1057,9 @@ CREATE TABLE repeat_index_demo (
 ```
 
 我们看到，col 1 既是主键、又给它定义为一个唯一索引，还给它定义了一个普通索引，可是主键本身就会生成聚簇索引，所以定义的唯一索引和普通索引是重复的，这种情况要避免。
+
+### 3.5小结
+
+索引是一把双刃剑，可提高查询效率，但也会降低插入和更新的速度并占用磁盘空间。
+
+选择索引的最终目的是为了使查询的速度变快，上面给出的原则是最基本的准则，但不能拘泥于上面的准则，大家要在以后的学习和工作中进行不断的实践，根据应用的实际情况进行分析和判断，选择最合适的索引方式。
