--- a/mysql/高级篇/第09章_性能分析工具的使用.md
+++ b/mysql/高级篇/第09章_性能分析工具的使用.md
@@ -1,5 +1,7 @@
 # 第 09 章_性能分析工具的使用
 
+在数据库调优中，我们的目标就是`响应时间更快，吞吐量更大`。利用宏观的监控工具和微观的日志分析可以帮我们快速找到调优的思路和方式。
+
 
 ## 1. 数据库服务器的优化步骤
 
@@ -8,6 +10,22 @@
 整个流程划分成了`观察（Show status）`和`行动（Action）`两个部分。字母 S 的部分代表观察（会使用相应的分析工具），字母 A 代表的部分是行动（对应分析可以采取的行动）。
 
 ![image-20220209151307753](images/image-20220209151307753.png)
+
+我们可以通过观察了解数据库整体的运行状态，通过性能分析工具可以让我们了解执行慢的SQL都有哪些，查看具体的SQL执行计划，甚至是SQL执行中的每一步的成本代价，这样才能定位问题所在，找到了问题，再采取相应的行动。
+
+**详细解释一下这张图：**
+
+首先在S1部分，我们需要观察服务器的状态是否存在周期性的波动。如果存在周期性波动，有可能是周期性节点的原因，比如双十一、促销活动等。这样的话，我们可以通过A1这一步骤解决，也就是加缓存，或者更改缓存失效策略。
+
+如果缓存策略没有解决，或者不是周期性波动的原因，我们就需要进一步分析查询延迟和卡顿的原因。接下来进入S2这一步，我们需要开启慢查询。慢查询可以帮我们定位执行慢的SQL语句。我们可以通过设置`long_query_time` 参数定义“慢”的阈值，如果SQL执行时间超过了long_query_time，则会认为是慢查询。当收集上来这些慢查询之后，我们就可以通过分析工具对慢查询日志进行分析。
+
+在S3这一步骤中，我们就知道了执行慢的SQL，这样就可以针对性地用EXPLAIN 查看对应SQL 语句的执行计划，或者使用`show profile` 查看SQL中每一个步骤的时间成本。这样我们就可以了解SQL查询慢是因为执行时间长，还是等待时间长。
+
+如果是SQL等待时间长，我们进入A2步骤。在这一步骤中，我们可以调优服务器的参数，比如适当增加数据库缓冲池等。如果是SQL执行时间长，就进入A3步骤，这一步中我们需要考虑是索引设计的问题？还是查询关联的数据表过多？还是因为数据表的字段设计问题导致了这一现象。然后在这些维度上进行对应的调整。
+
+如果A2和A3都不能解决问题，我们需要考虑数据库自身的SQL 查询性能是否已经达到了瓶颈，如果确认没有达到性能瓶颈，就需要重新检查，重复以上的步骤。如果已经达到了性能瓶颈，进入A4阶段，需要考虑增加服务器，采用读写分离的架构，或者考虑对数据库进行分库分表，比如垂直分库、垂直分表和水平分表等。
+
+以上就是数据库调优的流程思路。如果我们发现执行SQL时存在不规则延迟或卡顿的时候，就可以采用分析工具帮我们定位有问题的SQL，这三种分析工具你可以理解是SQL 调优的三个步骤：`慢查询`、`EXPLAIN`和`SHOW PROFILING`。
 
 **小结：**
 
@@ -39,6 +57,10 @@ SHOW [GLOBAL|SESSION] STATUS LIKE '参数';
 - Com_update：更新操作的次数。 • Com_delete：删除操作的次数。
 
 ## 3. 统计SQL的查询成本：last_query_cost
+
+一条SQL查询语句在执行前需要确定查询执行计划，如果存在多种执行计划的话，MySQL会计算每个执行计划所需要的成本，从中选择`成本最小`的一个作为最终执行的执行计划。
+
+如果我们想要查看某条SQL语句的查询成本，可以在执行完这条SQL语句之后，通过查看当前会话中的`last_query_cost`变量值来得到当前查询的成本。它通常也是我们`评价一个查询的执行效率`的一个常用指标。这个查询成本对应的是`SQL语句所需要读取的页的数量`。
 
 我们依然使用第 8 章的 student_info 表为例：
 
@@ -98,7 +120,22 @@ mysql> SHOW STATUS LIKE 'last_query_cost';
 
 **使用场景：** 它对于比较开销是非常有用的，特别是我们有好几种查询方式可选的时候。
 
+> SQL查询是一个动态的过程，从页加载的角度来看，我们可以得到以下两点结论：
+>
+> 1. `位置决定效率`。如果页就在数据库`缓冲池`中，那么效率是最高的，否则还需要从`内存`或者`磁盘`中进行读取，当然针对单个页的读取来说，如果页存在于内存中，会比在磁盘中读取效率高很多。
+> 2. `批量决定效率`。如果我们从磁盘中对单一页进行随机读，那么效率是很低的（差不多10ms），而采用顺序读取的方式，批量对页进行读取，平均一页的读取效率就会提升很多，甚至要快于单个页面在内存中的随机读取。
+>
+> 所以说，遇到I/0并不用担心，方法找对了，效率还是很高的。我们首先要考虑数据存放的位置，如果是经常使用的数据就要尽量放到`缓冲池`中，其次我们可以充分利用磁盘的吞吐能力，一次性批量读取数据，这样单个页的读取效率也就得到了提升。
+
 ## 4. 定位执行慢的 SQL：慢查询日志
+
+MySQL的慢查询日志，用来记录在MySQL中`响应时间超过阀值`的语句，具体指运行时间超过`long_query_time`值的sQL，则会被记录到慢查询日志中。long_query_time的默认值为`10`，意思是运行10秒以上（不含10秒）的语句，认为是超出了我们的最大忍耐时间值。
+
+它的主要作用是，帮助我们发现那些执行时间特别长的SQL查询，并且有针对性地进行优化，从而提高系统的整体效率。当我们的数据库服务器发生阻塞、运行变慢的时候，检查一下慢查询日志，找到那些慢查询，对解决问题很有帮助。比如一条sql执行超过5秒钟，我们就算慢SQL，希望能收集超过5秒的sql，结合explain进行全面分析。
+
+默认情况下，MySQL数据库`没有开启慢查询日志`，需要我们手动来设置这个参数。**如果不是调优需要的话，一般不建议启动该参数**，因为开启慢查询日志会或多或少带来一定的性能影响。
+
+慢查询日志支持将日志记录写入文件。
 
 ### 4. 1 开启慢查询日志参数
 
@@ -391,6 +428,18 @@ SHOW VARIABLES LIKE '%long_query_time%';
 
 ### 4. 7 删除慢查询日志
 
+从执行结果可以看出，慢查询日志的目录默认为MySQL的数据目录，在该目录下`手动删除慢查询日志文件`即可。
+
+使用命令`mysqladmin flush-1ogs` 来重新生成查询日志文件，具体命令如下，执行完毕会在数据目录下重新生成慢查询日志文件。
+
+```mysql
+mysqladmin -uroot -p flush-logs slow
+```
+
+> 提示
+>
+> 慢查询日志都是使用mysqladmin flush-logs命令来删除重建的。使用时一定要注意，一旦执行了这个命令，慢查询日志都只存在新的日志文件中，如果需要旧的查询日志，就必须事先备份。
+
 ## 5. 查看 SQL 执行成本：SHOW PROFILE
 
 ```mysql
@@ -449,11 +498,42 @@ mysql> show profile cpu,block io for query 2 ;
 
 ⑨ SWAPS：显示交换次数开销信息。
 
+**日常开发需注意的结论：**
+
+①`converting HEAP to MyISAY`：查询结果太大，内存不够，数据往磁盘上搬了。
+
+②`creating tmp table`：创建临时表。先拷贝数据到临时表，用完后再删除临时表。
+
+③`Copying to tmp table on disk`：把内存中临时表复制到磁盘上，警惕！
+
+④`locked`。
+
+如果在show profile诊断结果中出现了以上4条结果中的任何一条，则sql语句需要优化。
+
+**注意：**
+
+不过SHOW PROFILE命令将被弃用，我们可以从information_schema中的profiling数据表进行查看。
+
 ## 6. 分析查询语句：EXPLAIN
 
 ### 6. 1 概述
 
-**官网介绍**
+**定位了查询慢的SQL之后，我们就可以使用EXPLAIN 或DESCRIBE工具做针对性的分析查询语句**。DESCRIBE语句的使用方法与EXPLAIN语句是一样的，并且分析结果也是一样的。
+
+MySQL中有专门负责优化SELECT语句的优化器模块，主要功能：通过计算分析系统中收集到的统计信息，为客户端请求的Query提供它认为最优的`执行计划`（他认为最优的数据检索方式，但不见得是DBA认为是最优的，这部分最耗费时间）。
+
+这个执行计划展示了接下来具体执行查询的方式，比如多表连接的顺序是什么，对于每个表采用什么访问方法来具体执行查询等等。MySQL为我们提供了EXPLAIN语句来帮助我们查看某个查询语句的具体执行计划，大家看懂EXPLAIN语句的各个输出项，可以有针对性的提升我们查询语句的性能。
+
+**1. 能做什么？**
+
+- 表的读取顺序
+- 数据读取操作的操作类型
+- 哪些索引可以使用
+- 哪些索引被实际使用
+- 表之间的引用
+- 每张表有多少行被优化器查询
+
+**2. 官网介绍**
 
 https://dev.mysql.com/doc/refman/5.7/en/explain-output.html
 
@@ -461,7 +541,7 @@ https://dev.mysql.com/doc/refman/8.0/en/explain-output.html
 
 ![image-20220209153306644](images/image-20220209153306644.png)
 
-**版本情况**
+**3. 版本情况**
 
 - MySQL 5.6.3以前只能`EXPLAIN SELECT`；MYSQL 5.6.3以后就可以`EXPLAIN SELECT，UPDATE，DELETE`
 
@@ -694,6 +774,10 @@ mysql> EXPLAIN SELECT * FROM s1  UNION ALL SELECT * FROM s2;
 
 #### 3. select_type
 
+一条大的查询语句里边可以包含若干个SELECT关键字，`每个SELECT关键字代表着一个小的查询语句`，而每个SELECT关键字的FROM子句中都可以包含若干张表（这些表用来做连接查询），`每一张表都对应着执行计划输出中的一条记录`，对于在同一个SELECT关键字中的表来说，它们的id值是相同的。
+
+MySQL为每一个SELECT关键字代表的小查询都定义了一个称之为select_type的属性，意思是我们只要知道了某个小查询的 `select_type属性`，就知道了这个`小查询在整个大查询中扮演了一个什么角色`，我们看一下select_type都能取哪些值，请看官方文档：
+
 ![image-20220209154332323](images/image-20220209154332323.png)
 
 具体分析如下：
@@ -807,6 +891,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 
 - `system`
 
+  当表中只有一条记录并且该表使用的存储引擎的统计数据是精确的，比如MyISAM、Memory，那么对该表的访问方法就是system。比方说我们新建一个MyISAM表，并为其插入一条记录：
+
   ```mysql
   mysql> CREATE TABLE t(i int) Engine=MyISAM;
   Query OK, 0 rows affected (0.05 sec)
@@ -825,6 +911,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 
 - `const`
 
+  当我们根据主键或者唯一二级索引列与常数进行等值匹配时，对单表的访问方法就是`const`
+
   ```mysql
   mysql> EXPLAIN SELECT * FROM s1 WHERE id = 10005 ;
   ```
@@ -832,6 +920,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
   ![image-20220209155221917](images/image-20220209155221917.png)
 
 - `eq_ref`
+
+  在连接查询时，如果被驱动表是通过主键或者唯一二级索引列等值匹配的方式进行访问的（如果该主键或者唯一二级索引是联合索引的话，所有的索引列都必须进行等值比较），则对该被驱动表的访问方法就是`eq_ref`
 
   ```mysql
   mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2 ON s1.id = s2.id;
@@ -842,6 +932,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
   从执行计划的结果中可以看出，MySQL打算将s2 作为驱动表，s1 作为被驱动表，重点关注s 1 的访问方法是`eq_ref`，表明在访问s1 表的时候可以`通过主键的等值匹配`来进行访问。
 
 - `ref`
+
+  当通过普通的二级索引列与常量进行等值匹配时来查询某个表，那么对该表的访问方法就可能是`ref`
 
   ```mysql
   mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a';
@@ -855,6 +947,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 
 - `ref_or_null`
 
+  当对普通二级索引进行等值匹配查询，该索引列的值也可以是NULL值时，那么对该表的访问方法就可能是`ref_or_null`
+
   ```mysql
   mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' OR key1 IS NULL;
   ```
@@ -862,6 +956,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
   ![image-20220209155423462](images/image-20220209155423462.png)
 
 - `index_merge`
+
+  单表访问方法时在某些场景下可以使用`Intersection`、`Union`、`Sort-Union`这三种索引合并的方式来执行查询
 
   ```mysql
   mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a' OR key3 = 'a';
@@ -872,6 +968,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
   从执行计划的`type`列的值是`index_merge`就可以看出，MySQL 打算使用索引合并的方式来执行对`s1`表的查询。
 
 - `unique_subquery`
+
+  `unique_subquery`是针对在一些包含IN子查询的查询语句中，如果查询优化器决定将IN子查询转换为`ExISTS`子查询，而且子查询可以使用到主键进行等值匹配的话，那么该子查询执行计划的type列的值就是`unique_subquery`
 
   ```mysql
   mysql> EXPLAIN SELECT * FROM s1 WHERE key2 IN (SELECT id FROM s2 where s1.key 1 =s2.key 1 ) OR key3 = 'a';
@@ -889,6 +987,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 
 - `range`
 
+  如果使用索引获取某些范围区间的记录，那么就可能使用到`range`访问方法
+
   ```mysql
   mysql> EXPLAIN SELECT * FROM s1 WHERE key1 IN ('a', 'b', 'c');
   ```
@@ -904,6 +1004,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
   ![image-20220209155653602](images/image-20220209155653602.png)
 
 - `index`
+
+  当我们可以使用索引覆盖，I但需要扫描全部的索引记录时，该表的访问方法就是`index`
 
   ```mysql
   mysql> EXPLAIN SELECT key_part2 FROM s1 WHERE key_part3 = 'a';
@@ -921,7 +1023,9 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2;
 
 **小结**：
 
-**结果值从最好到最坏依次是： `system > const > eq_ref > ref` > fulltext > ref_or_null > index_merge >unique_subquery > index_subquery > `range > index > ALL` 其中比较重要的几个提取出来（见上图中的蓝色）。SQL 性能优化的目标：至少要达到 range 级别，要求是 ref 级别，最好是 consts级别。（阿里巴巴开发手册要求）**
+**结果值从最好到最坏依次是： `system > const > eq_ref > ref` > fulltext > ref_or_null > index_merge >unique_subquery > index_subquery > `range > index > ALL` **
+
+**其中比较重要的几个提取出来（见上图中的蓝色）。SQL 性能优化的目标：至少要达到 range 级别，要求是 ref 级别，最好是 consts级别。（阿里巴巴开发手册要求）**
 
 #### 6. possible_keys和key
 
@@ -932,6 +1036,8 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 > 'z' AND key3 = 'a';
 ![image-20220209155925342](images/image-20220209155925342.png)
 
 #### 7. key_len ☆
+
+实际使用到的索引长度（即：字节数），帮你检查是否充分的利用上了索引，值越大越好，主要针对于联合索引，有一定参考价值
 
 ```mysql
 mysql> EXPLAIN SELECT * FROM s1 WHERE id = 10005 ;
@@ -979,6 +1085,8 @@ char(10)固定字段且不允许NULL = 10 * ( character set：utf8=3,gbk=2,latin
 
 #### 8. ref
 
+当使用索引列等值查询时，与索引列进行等值匹配的对象信息。
+
 ```mysql
 mysql> EXPLAIN SELECT * FROM s1 WHERE key1 = 'a';
 ```
@@ -997,6 +1105,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2 ON s2.key 1 = UPPER(s1.key 1 );
 
 #### 9. rows ☆
 
+预估的需要读取的记录条数，值越小越好
+
 ```mysql
 mysql> EXPLAIN SELECT * FROM s1 WHERE key1 > 'z';
 ```
@@ -1004,6 +1114,8 @@ mysql> EXPLAIN SELECT * FROM s1 WHERE key1 > 'z';
 ![image-20220209160255008](images/image-20220209160255008.png)
 
 #### 10. filtered
+
+某个表经过腹索条件过滤后剩余记录条数的百分比
 
 ```mysql
 mysql> EXPLAIN SELECT * FROM s1 WHERE key1 > 'z' AND common_field = 'a';
@@ -1019,6 +1131,8 @@ mysql> EXPLAIN SELECT * FROM s1 INNER JOIN s2 ON s1.key 1 = s2.key 1 WHERE s1.co
 
 #### 11. Extra ☆
 
+ 
+
 ```mysql
 mysql> EXPLAIN SELECT 1 ;
 ```
@@ -1026,6 +1140,8 @@ mysql> EXPLAIN SELECT 1 ;
 ![image-20220209160406651](images/image-20220209160406651.png)
 
 - `Impossible WHERE`
+
+  
 
   ```mysql
   mysql> EXPLAIN SELECT * FROM s1 WHERE 1 != 1 ;
@@ -1278,6 +1394,10 @@ AS `key1` from `atguigu`.`s1` join `atguigu`.`s2` where ((`atguigu`.`s1`.`key1` 
 
 
 ## 8. 分析优化器执行计划：trace
+
+`OPTIMIZER_TRACE`是MySQL5.6引入的一项跟踪功能，它可以跟踪优化器做出的各种决策（比如访问表的方法、各种开销计算、各种转换等），并将跟踪结果记录到`INFORMATION_SCHEMA.OPTIMIZER_TRACE` 表中。
+
+此功能默认关闭。开启trace，并设置格式为JSON，同时设置trace最大能够使用的内存大小，避免解析过程中因为默认内存过小而不能够完整展示。
 
 ```mysql
 SET optimizer_trace="enabled=on",end_markers_in_json=on;
@@ -1532,8 +1652,9 @@ INSUFFICIENT_PRIVILEGES: 0 //缺失权限
 
 
 
-
 ## 9. MySQL监控分析视图-sys schema
+
+关于MySQL的性能监控和问题诊断，我们一般都从performance_schema中去获取想要的数据，在MySQL5.7.7版本中新增sys_schema，它将performance_schenla和information_schema中的数据以更容易理解的方式总结归纳为”视图”，其目的就是为了`降低查询performance_schema的复杂度`，让DBA能够快速的定位问题。下面看看这些库中都有哪些监控表和视图，掌握了这些，在我们开发和运维的过程中就起到了事半功倍的效果。
 
 ### 9.1 Sys schema视图摘要
 
