--- a/mysql/高级篇/第11章_数据库的设计规范.md
+++ b/mysql/高级篇/第11章_数据库的设计规范.md
@@ -1,7 +1,34 @@
 # 第 11 章_数据库的设计规范
 
-
 ## 1. 为什么需要数据库设计
+
+我们在设计数据表的时候，要考虑很多问题。比如：
+
+- 用户都需要什么数据？需要在数据表中保存哪些数据？
+- 如何保证数据表中数据的`正确性`，当插入、删除、更新的时候该进行怎样的`约束检查`？
+- 如何降低数据表的`数据冗余度`，保证数据表不会因为用户量的增长而迅速扩？
+- 如何让负责数据库维护的人员`更方便`地使用数据库？
+- 使用数据库的应用场景也各不相同，可以说针对不同的情况，设计出来的数据表可能千差万别。
+
+**现实情况中，面临的场景：**
+
+当数据库运行了一段时间之后，我们才发现数据表设计的有问题。重新调整数据表的结构，就需要做数据迁移，还有可能影响程序的业务逻辑，以及网站正常的访问。
+
+**如果是糟糕的数据库设计可能会造成以下问题：**
+
+- 数据冗余、信息重复，存储空间浪费
+- 数据更新、插入、删除的异常
+- 无法正确表示信息
+- 丢失有效信息
+- 程序性能差
+
+**良好的数据库设计则有以下优点：**
+
+- 节省数据的存储空间
+- 能够保证数据的完整性
+- 方便进行数据库应用系统的开发
+
+总之，开始设置数据库的时候，我们就需要重视数据表的设计。为了建立`冗余较小`、`结构合理`的数据库，设计数据库时必须遵循一定的规则。
 
 ## 2. 范 式
 
@@ -9,13 +36,30 @@
 
 **在关系型数据库中，关于数据表设计的基本原则、规则就称为范式**。 可以理解为，一张数据表的设计结构需要满足的某种设计标准的`级别`。要想设计一个结构合理的关系型数据库，必须满足一定的范式。
 
+范式的英文名称是`Normal Form`，简称`NF`。它是英国人E.F.Codd在上个世纪70年代提出关系数据库模型后总结出来的。范式是关系数据库理论的基础，也是我们在设计数据库结构过程中所要遵循的`规则`和`指导方法`。
+
 ### 2. 2 范式都包括哪些
 
-目前关系型数据库有六种常见范式，按照范式级别，从低到高分别是： **第一范式（ 1 NF）、第二范式（ 2 NF）、第三范式（ 3 NF）、巴斯-科德范式（BCNF）、第四范式( 4 NF）和第五范式（ 5 NF，又称完美范式）** 。
+目前关系型数据库有六种常见范式，按照范式级别，从低到高分别是： **第一范式（ 1NF）、第二范式（ 2NF）、第三范式（ 3NF）、巴斯-科德范式（BCNF）、第四范式( 4NF）和第五范式（ 5NF，又称完美范式）** 。
+
+数据库的范式设计越高阶，冗余度就越低，同时高阶的范式一定符合低阶范式的要求，满足最低要求的范式是第一范式（1NF）。在第一范式的基础上进一步满足更多规范要求的称为第二范式（2NF），其余范式以次类推。
+
+一般来说，在关系型数据库设计中，最高也就遵循到`BCNF`，普遍还是`3NF`。但也不绝对，有时候为了提高某些查询性能，我们还需要破坏范式规则，也就是`反规范化`。
 
 ![image-20220210150451849](images/image-20220210150451849.png)
 
 ### 2. 3 键和相关属性的概念
+
+范式的定义会使用到主键和候选键，数据库中的键（Key）由一个或者多个属性组成。数据表中常用的几种键和属性的定义：
+
+- `超键`：能唯一标识元组的属性集叫做超键。
+- `候选键`：如果超键不包括多余的属性，那么这个超键就是候选键。
+- `主键`：用户可以从候选键中选择一个作为主键。
+- `外键`：如果数据表R1中的某属性集不是R1的主键，而是另一个数据表R2的主键，那么这个属性集就是数据表R1的外键。
+- `主属性`：包含在任一候选键中的属性称为主属性。
+- `非主属性`：与主属性相对，指的是不包含在任何一个候选键中的属性。
+
+通常，我们也将候选键称之为“码”，把主键也称为“主码”。因为键可能是由多个属性组成的，针对单个属性，我们还可以用主属性和非主属性来进行区分。
 
 **举例：**
 
@@ -35,7 +79,11 @@
 
 - `主属性、非主属性`：在球员表中，主属性是（球员编号）（身份证号），其他的属性（姓名）（年龄）（球队编号）都是非主属性。
 
-### 2. 4 第一范式( 1 st NF)
+### 2. 4 第一范式( 1st NF)
+
+第一范式主要是确保数据表中每个字段的值必须具有`原子性`，也就是说数据表中每个字段的值为`不可再次拆分`的最小数据单元。
+
+我们在设计某个字段的时候，对于字段X来说，不能把字段X拆分成字段X-1和字段X-2。事实上，任何的DBMS都会满足第一范式的要求，不会将字段进行拆分。
 
 **举例 1 ：**
 
@@ -69,7 +117,9 @@ user 表的设计不符合第一范式
 
 ![image-20220210151048427](images/image-20220210151048427.png)
 
-### 2. 5 第二范式( 2 nd NF)
+### 2. 5 第二范式( 2nd NF)
+
+第二范式要求，在满足第一范式的基础上，还要**满足数据表里的每一条数据记录，都是可唯一标识的。而且所有非主键字段，都必须完全依赖主键，不能只依赖主键的一部分**。如果知道主键的所有属性的值，就可以检索到任何元组（行）的任何属性的任何值。（要求中的主键，其实可以拓展替换为候选键）。
 
 **举例 1 ：**
 
@@ -122,7 +172,11 @@ Orders表和OrderDetails表如下，此时符合第二范式。
 
 
 
-### 2. 6 第三范式( 3 rd NF)
+### 2. 6 第三范式( 3rd NF)
+
+第三范式是在第二范式的基础上，确保数据表中的每一个非主键字段都和主键字段直接相关，也就是说，**要求数据表中的所有非主键字段不能依赖于其他非主键字段**。（即，不能存在非主属性A依赖于非主属性B，非主属性B依赖于主键C的情况，即存在“A→B→C”的决定关系）通俗地讲，该规则的意思是所有`非主键属性`之间不能有依赖关系，必须`相互独立`。
+
+这里的主键可以拓展为候选键。
 
 **举例 1 ：**
 
@@ -172,9 +226,34 @@ Orders表和OrderDetails表如下，此时符合第二范式。
 
 > 符合3NF后的数据模型通俗地讲，2NF和3NF通常以这句话概括：“每个非键属性依赖于键，依赖于整个键，并且除了键别无他物”。
 
+### 2.7 小结
+
+关于数据表的设计，有三个范式要遵循。
+
+（1）第一范式（1NF），确保每列保持`原子性`
+数据库的每一列都是不可分割的原子数据项，不可再分的最小数据单元，而不能是集合、数组、记录等非原子数据项。
+
+（2）第二范式（2NF），确保每列都和主键`完全依赖`
+
+尤其在复合主键的情况下，非主键部分不应该依赖于部分主键。
+
+（3）第三范式（3NF）确保每列都和主键列`直接相关`，而不是间接相关
+
+范式的优点：数据的标准化有助于消除数据库中的`数据冗余`，第三范式（3NF）通常被认为在性能、扩展性和数据完整性方面达到了最好的平衡。
+
+范式的缺点：范式的使用，可能`降低查询的效率`。因为范式等级越高，设计出来的数据表就越多、越精细，数据的冗余度就越低，进行数据查询的时候就可能需要`关联多张表`，这不但代价昂贵，也可能使一些`索引策略无效`。
+
+范式只是提出了设计的标准，实际上设计数据表时，未必一定要符合这些标准。开发中，我们会出现为了性能和读取效率违反范式化的原则，通过`增加少量的冗余`或重复的数据来提高数据库的`读性能`，减少关联查询，join表的次数，实现`空间换取时间`的目的。因此在实际的设计过程中要理论结合实际，灵活运用。
+
+> 范式本身没有优劣之分，只有适用场景不同。没有完美的设计，只有合适的设计，我们在数据表的设计中，还需要根据需求将范式和反范式混合使用。
+
 ## 3. 反范式化
 
 ### 3. 1 概述
+
+有的时候不能简单按照规范要求设计数据表，因为有的数据看似冗余，其实对业务来说十分重要。这个时候，我们就要遵循`业务优先`的原则，首先满足业务需求，再尽量减少冗余。
+
+如果数据库中的数据量比较大，系统的UV和PV访问频次比较高，则完全按照MySQL的三大范式设计数据表，读数据时会产生大量的关联查询，在一定程度上会影响数据库的读性能。如果我们想对查询效率进行优化，`反范式优化`也是一种优化思路。此时，可以通过在数据表中`增加冗余字段`来提高数据库的读性能。
 
 **规范化 vs 性能**
 
@@ -282,13 +361,34 @@ ORDER BY class_id DESC LIMIT 1000 ;
 
 #### 1. 增加冗余字段的建议
 
+增加冗余字段一定要符合如下两个条件。只有满足这两个条件，才可以考虑增加冗余字段。
+
+1）这个冗余字段`不需要经常进行修改`；
+
+2）这个冗余字段`查询的时候不可或缺`。
+
 #### 2. 历史快照、历史数据的需要
 
 在现实生活中，我们经常需要一些冗余信息，比如订单中的收货人信息，包括姓名、电话和地址等。每次发生的`订单收货信息`都属于`历史快照`，需要进行保存，但用户可以随时修改自己的信息，这时保存这些冗余信息是非常有必要的。
 
 反范式优化也常用在`数据仓库`的设计中，因为数据仓库通常存储历史数据，对增删改的实时性要求不强，对历史数据的分析需求强。这时适当允许数据的冗余度，更方便进行数据分析。
 
+我简单总结下数据仓库和数据库在使用上的区别：
+
+1.数据库设计的目的在于捕获数据，而数据仓库设计的目的在于分析数据；
+
+2.数据库对数据的增删改实时性要求强，需要存储在线的用户数据，而数据仓库存储的一般是历史数据；
+
+3.数据库设计需要尽量避免冗余，但为了提高查询效率也允许一定的冗余度，而数据仓库在设计上更偏向采用反范式设计。
+
 ## 4. BCNF(巴斯范式)
+
+人们在3NF的基础上进行了改进，提出了**巴斯范式（BCNF）**，**也叫做巴斯-科德范式（Boyce-Codd Normal Form）**。BCNF被认为没有新的设计规范加入，只是对第三范式中设计规范要求更强，使得数据库冗余度更小。
+所以，称为是`修正的第三范式`，或`扩充的第三范式`，BCNF不被称为第四范式。
+
+若一个关系达到了第三范式，并且它只有一个候选键，或者它的每个候选键都是单属性，则该关系自然达到BC范式
+
+一般来说，一个数据库设计符合3NF或BCNF就可以了。
 
 **1. 案例**
 
@@ -306,19 +406,21 @@ ORDER BY class_id DESC LIMIT 1000 ;
 
 `非主属性`：数量这个属性。
 
+
+
 **2. 是否符合三范式**
 
 如何判断一张表的范式呢？我们需要根据范式的等级，从低到高来进行判断。
 
-首先，数据表每个属性都是原子性的，符合 1 NF 的要求；
+首先，数据表每个属性都是原子性的，符合 1NF 的要求；
 
-其次，数据表中非主属性”数量“都与候选键全部依赖，（仓库名，物品名）决定数量，（管理员，物品名）决定数量。因此，数据表符合 2 NF 的要求；
+其次，数据表中非主属性”数量“都与候选键全部依赖，（仓库名，物品名）决定数量，（管理员，物品名）决定数量。因此，数据表符合 2NF 的要求；
 
-最后，数据表中的非主属性，不传递依赖于候选键。因此符合 3 NF 的要求。
+最后，数据表中的非主属性，不传递依赖于候选键。因此符合 3NF 的要求。
 
 
 
-##### 3. 存在的问题
+**3. 存在的问题**
 
 既然数据表已经符合了 3NF 的要求，是不是就不存在问题了呢？我们来看下面的情况：
 
@@ -327,6 +429,8 @@ ORDER BY class_id DESC LIMIT 1000 ;
 2. 如果仓库更换了管理员，我们就可能会`修改数据表中的多条记录`；
 
 3. 如果仓库里的商品都卖空了，那么此时仓库名称和相应的管理员名称也会随之被删除。你能看到，即便数据表符合 3NF 的要求，同样可能存在插入，更新和删除数据的异常情况。
+
+
 
 **4. 问题解决**
 
@@ -361,6 +465,15 @@ ORDER BY class_id DESC LIMIT 1000 ;
 ![image-20220210153232096](images/image-20220210153232096.png)
 
 ## 5. 第四范式
+
+多值依赖的概念：
+
+- `多值依赖`即属性之间的一对多关系，记为K→→A。
+- `函数依赖`事实上是单值依赖，所以不能表达属性值之间的一对多关系。
+- `平凡的多值依赖`：全集U=K+A，一个K可以对应于多个A，即K→→A。此时整个表就是一组一对多关系。
+- `非平凡的多值依赖`：全集U=K+A+B，一个K可以对应于多个A，也可以对应于多个B，A与B互相独立，即K→→A，K→→B。整个表有多组一对多关系，且有：“一”部分是相同的属性集合，“多”部分是互相独立的属性集合。
+
+第四范式即在满足巴斯-科德范式（BCNF）的基础上，消除非平凡且非函数依赖的多值依赖（即把同一表内的多对多关系删除）。
 
 **举例 1** ： 职工表(职工编号，职工孩子姓名，职工选修课程)。
 
@@ -404,9 +517,57 @@ ORDER BY class_id DESC LIMIT 1000 ;
 
 ## 7. 实战案例
 
-见视频讲解（ **https://www.bilibili.com/video/BV1iq4y1u7vj?from=search&seid=4297501441472622157&spm_id_from=333.337.0.0** ）
+商超进货系统中的`进货单表`进行剖析：
+
+进货单表：
+
+![image-20220217214240533](images/image-20220217214240533.png)
+
+这个表中的字段很多，表里的数据量也很惊人。大量重复导致表变得庞大，效率极低。如何改造？
+
+> 在实际工作场景中，这种由于数据表结构设计不合理，而导致的数据重复的现象并不少见。往往是系统虽然能够运行，承载能力却很差，稍微有点流量，就会出现内存不足、CUP使用率飙升的情况，甚至会导致整个项目失败。
+
+### 7.1 迭代1次：考虑1NF
+
+第一范式要求：**所有的字段都是基本数据字段，不可进一步拆分**。这里需要确认，所有的列中，每个字段只包含一种数据。
+
+这张表里，我们把“property”这一字段，拆分成“specification（规格）”和“unit（单位）”，这2个字段如下：
+
+![image-20220217214455621](images/image-20220217214455621.png)
+
+
+
+### 7.2 迭代2次：考虑2NF
+
+第二范式要求，在满足第一范式的基础上，**还要满足数据表里的每一条数据记录，都是可唯一标识的。而且所有字段，都必须完全依赖主键，不能只依赖主键的一部分**。
+
+![image-20220217214939341](images/image-20220217214939341.png)
+
+![image-20220217214959935](images/image-20220217214959935.png)
+
+
+
+
+
+### 7.3 迭代3次：考虑3NF
+
+
+
+
+
+### 7.4 反范式化：业务优先的原则
+
+
+
+
 
 ## 8. ER模型
+
+数据库设计是牵一发而动全身的。那有没有什么办法提前看到数据库的全貌呢？比如需要哪些数据表、数据表中应该有哪些字段，数据表与数据表之间有什么关系、通过什么字段进看连接，等等。这样我们才能进行整体的梳理和设计。
+
+其实，ER模型就是一个这样的工具。ER模型也叫作`实体关系模型`，是用来描述现实生活中客观存在的事物、事物的属性，以及事物之间关系的一种数据模型。**在开发基于数据库的信息系统的设计阶段，通常使用ER模型来描述信息需求和信息特性，帮助我们理清业务逻辑，从而设计出优秀的数据库**。
+
+### 8.1 ER模型包括哪些要素？
 
 **ER 模型中有三个要素，分别是实体、属性和关系 。**
 
